--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -130,12 +130,12 @@
  IS_ARCHAEOLOGICAL_SITE_CURRENT_EXCAVATOR_FLEET_TRIGGER:0 "Current excavator fleet is $FLEET$"
  MOD_SHIP_ARCHAEOLOGICAL_SITE_EXCAVATION_SPEED_MULT:0 "ความเร็วในการขุดค้นโบราณคดี"
  MOD_SHIP_ARCHAEOLOGICAL_SITE_CLUES_ADD:0 "ทักษะโบราณคดี"
- ARCHAEOLOGICAL_SITE_ON_ROLL_FAILED_RANGE:1 "($CHANCE|%0Y$) Result is between $MIN|0Y$ and $MAX|0Y$. Adds $CLUES|0Y$ clue(s)."
- ARCHAEOLOGICAL_SITE_ON_ROLL_FAILED_GREATER_THAN_EQ:0 "($CHANCE|%0Y$) Result is $MIN|0Y$ or greater. Finishes chapter."
- ARCHAEOLOGICAL_SITE_ON_ROLL_FAILED_LESS_THAN_EQ:0 "($CHANCE|%0Y$) Result is $MAX|0Y$ or less. Adds $CLUES|0Y$ clues."
+ ARCHAEOLOGICAL_SITE_ON_ROLL_FAILED_RANGE:1 "($CHANCE|%0Y$) ผลลัพธ์อยู่ระหว่าง $MIN|0Y$ ถึง $MAX|0Y$ เพิ่มเบาะแส $CLUES|0Y$"
+ ARCHAEOLOGICAL_SITE_ON_ROLL_FAILED_GREATER_THAN_EQ:0 "($CHANCE|%0Y$) ผลลัพธ์คือ $MIN|0Y$ หรือสูงกว่านั้น จบขั้นตอน"
+ ARCHAEOLOGICAL_SITE_ON_ROLL_FAILED_LESS_THAN_EQ:0 "($CHANCE|%0Y$) ผลลัพธ์คือ $MAX|0Y$ หรือน้อยกว่านั้น เพิ่มเบาะแส $CLUES|0Y$"
  archaeology_roll_header:2 "§H$ARCHAEOLOGICAL_SITE_BREAKTHROUGH$§!\nThis reflects the chance of your Scientist making a breakthrough during the excavation of the current site.\n\nEvery time a phase ends, a die (§Y1§! to §Y10§!) is rolled. The result of the roll is added to §YSkill Bonus§! and §YClues§!, then subtracted by §YDifficulty§!.\n\nThe current score before dice roll is $SCORE|0Y$.\n\n§ERoll Outcomes:§!"
  alert_activate_relic_title:0 "สามารถการเปิดใช้งานวัตถุโบราณได้"
- alert_activate_relic_instant:0 "It is now possible to activate one of your Relics."
+ alert_activate_relic_instant:0 "ตอนนี้คุณสามารถเปิดใช้งานหนึ่งในวัตถุโบราณของคุณได้แล้ว"
  CHAPTER_TITLE:0 "ขั้นที่ $CHAPTER$"
  CHAPTER_PROGRESS:0 "เหลือวันก่อนที่จะเปลี่ยนสถานะความคืบหน้า: $DAYS|Y$"
  DIFFICULTY_EASY:0 "§Gง่าย§!"
@@ -216,7 +216,7 @@
  feature_unlock_arcane_deciphering_desc:0 "$artifact_arcane_deciphering_effect$"
  requires_arcane_deciphering_no_cooldown:0 "$TRIGGER_FAIL$§RCannot decipher more arcane technology yet.§!"
  arcane_deciphering_cooldown:0 "เวลาคูลดาวน์ในการถอดรหัสที่ซ่อนเอาไว้"
- arcane_insight:0 "Arcane Insights"
+ arcane_insight:0 "ข้อมูลเชิงลึก Arcane"
  tech_arcane_deciphering:0 "การถอดรหัสที่ซ่อนเอาไว้"
  tech_arcane_deciphering_desc:0 "Various artifacts and technologies functioning by arcane means that cannot be understood or replicated... at least not by conventional science as it is known to us."
  artifact_proclaim_religious_finding:0 "ประกาศการเปิดเผยทางศาสนา"
@@ -453,7 +453,7 @@
  r_dragon_trophy_desc:0 "A trophy commemorating our victory over the nefarious Ether Drake. Were it not for its immense size, it would look good mounted on a wall."
  r_khans_throne:0 "บัลลังก์ข่าน"
  r_khans_throne_desc:0 "This piece of furniture is actually the throne from which the Great Khan ruled the Horde. It was recovered from the wreckage of the Great Khan's flagship after it was destroyed."
- khans_throne_passive_effect:0 "Grants access to the §Y$preset_satrapy$§! Subject Preset."
+ khans_throne_passive_effect:0 "สามารถใช้ระบบเมืองขึ้นแบบ §Y$preset_satrapy$§! ได้"
  r_worm_scales:0 "Scales of the Worm"
  r_worm_scales_desc:0 "Lucent and still warm to the touch. The scales emit a low-pitched hum which cannot be explained by way of science."
  r_rubricator:0 "Rubricator"
@@ -501,7 +501,7 @@
  evermore_science_desc:0 "The digitized population residing within the Evermore have been assigned to assist with scientific research."
  evermore_joy:0 "Ever More Joy"
  evermore_joy_desc:0 "This world's population can live out their fantasies together with the digitized population in the Evermore paradise."
- drums_of_war:0 "Drums of War"
+ drums_of_war:0 "ลั่นกลองรบ"
  ether_drake_triumph:0 "Ether Drake Triumph"
  worm_scales:0 "Worm Scale Influence"
  unbidden_ritual:0 "Unbidden Ritual"
@@ -587,8 +587,8 @@
  district_rw_nexus:0 "ส่วน Nexus"
  district_rw_nexus_plural:0 "ส่วน Nexus"
  district_rw_nexus_desc:0 "Efficient districts fill this Ring World section, provide locations for drones to be serviced and repaired before they are deployed to their work assignments."
- district_rw_industrial:0 "Industrial Segment"
- district_rw_industrial_plural:0 "Industrial Segments"
+ district_rw_industrial:0 "เซ็กเม้นอุตสาหกรรม"
+ district_rw_industrial_plural:0 "เซ็กเม้นอุตสาหกรรม"
  district_rw_industrial_desc:0 "Clanking factories and powerful machinery fill this Ring World section, providing a strong industrial base for the Empire."
  district_srw_commercial:0 "$district_hab_commercial$"
  district_srw_commercial_plural:0 "$district_hab_commercial_plural$"
@@ -667,11 +667,11 @@
  d_sentinels_metal:0 "เซนติเนล"
  d_sentinels_metal_desc:0 "The broken remains of nine monumental automatons made from an unusual metal alloy offer an ample supply of §HLiving Metal§!."
  ancrel.10001.name:0 "$tech_arcane_deciphering$"
- ancrel.10001.desc:0 "Study of the artifacts has advanced some of our research."
+ ancrel.10001.desc:0 "การศึกษาสิ่งประดิษฐ์โบราณทำให้การวิจัยของเราก้าวหน้า"
  ancrel.10002.name:0 "$tech_arcane_deciphering$"
  ancrel.10002.desc:0 "While the artifacts we are researching have not yielded an immediate breakthrough, they are accelerating research in all fields."
  ancrel.10003.name:0 "$tech_arcane_deciphering$"
- ancrel.10003.desc:0 "Study of the artifacts has yielded an unexpected breakthrough!"
+ ancrel.10003.desc:0 "การศึกษาสิ่งประดิษฐ์โบราณทำให้เกิดความก้าวหน้าอย่างคาดไม่ถึง!"
  ancrel.10004.name:0 "$tech_arcane_deciphering$"
  ancrel.10004.failtext:0 "§RRequires schematics acquired from §!§Y$tech_arcane_deciphering$§!"
  ancrel.10004.desc:0 "These artifacts can be used as the core for a powerful building that rivals those a Fallen Empire could create."
@@ -692,14 +692,14 @@
  ancrel.10030.name:0 "$mega_art_installation_4$"
  ancrel.10030.desc:0 "Priceless artifacts fill the Exhibition Stations, bringing the past to the present to inspire the future.\n\nThis is a glorious day."
  ancrel.10030.phobe.desc:0 "The greatness of the [From.Owner.GetName] is such that we can line the Exhibition Stations of our $mega_art_installation_3$ with priceless artifacts.\n\nLet the xenos look upon our works and despair."
- col_ring_research:0 "Research Ring World"
- col_ring_research_desc:0 "This entire ring world section is dedicated to the advancement of knowledge"
- col_ring_farming:0 "Agriculture Ring World"
- col_ring_farming_desc:0 "Endless fields are supported by the infrastructure of this ring world section to maximize growing potential"
- col_ring_trade:0 "Commercial Ring World"
- col_ring_trade_desc:0 "If you can't buy it here, it either doesn't exist or you didn't really want it anyway"
- col_ring_generator:0 "Generator Ring World"
- col_ring_generator_desc:0 "Linking generator segments together across this ring world section provides efficiencies of scale"
+ col_ring_research:0 "โลกวงแหวนการวิจัย"
+ col_ring_research_desc:0 "เซ็กชันของโลกวงแหวนทั้งหมดนี้มีไว้สำหรับการพัฒนาความรู้"
+ col_ring_farming:0 "โลกวงแหวนการเกษตร"
+ col_ring_farming_desc:0 "ทุ่งขนาดใหญ่ที่ไม่มีที่สิ้นสุดได้รับการสนับสนุนจากโครงสร้างพื้นฐานของเซ็กชันโลกวงแหวนนี้เพื่อเพิ่มศักยภาพการเติบโตสูงสุด"
+ col_ring_trade:0 "โลกวงแหวนการค้า"
+ col_ring_trade_desc:0 "หากคุณไม่สามารถหาซื้อได้ที่นี่ แสดงว่าสิ่งนั้นไม่มีอยู่จริง"
+ col_ring_generator:0 "โลกวงแหวนผลิตพลังงาน"
+ col_ring_generator_desc:0 "การลิงก์กลุ่มเครื่องกำเนิดไฟฟ้าเข้าด้วยกันในเซ็กชันโลกวงแหวนนี้ช่วยให้เกิดประสิทธิภาพตามขนาดความต้องการที่เพิ่มขึ้น"
  SHIP_SIZE_CAPACITY:0 "£$SHIP_ICON$£ $SHIP_SIZE$ : §Y$VALUE$/$MAX$§!"
  pop_cat_assimilation:0 "การทำให้เหมือนหรือคล้ายกัน"
  pop_cat_assimilation_plural:0 "$pop_cat_assimilation$"
@@ -814,7 +814,7 @@
  improved_cybrex_mining_hub_desc:0 "ความเปลี่ยนแปลงของระบบ:\nผลผลิตของสถานีขุดแร่: §G+150%§!"
  sm_irassian_naval_yards:0 "$tech_secrets_irassian$"
  sm_irassian_naval_yards_desc:0 "$tech_secrets_irassian_desc$\n"
- requires_shipyard:0 "§RRequires §Y$sm_shipyard$§!.§!"
+ requires_shipyard:0 "§Rต้องมี §Y$sm_shipyard$§!§!"
  sm_irassian_naval_yards_desc_modifier:0 "[Root.GetIrassianNavalYardsEffect]"
  irassian_naval_yards_desc:0 "อู่ต่อยาน: §G+1§! §Yความจุอู่ต่อยาน§!\nการปรับเปลี่ยนของฐานอวกาศ:\nความเร็วในการสร้างยาน: §G+20%§!"
  improved_irassian_naval_yards_desc:0 "อู่ต่อยาน: §G+1§! §Yความจุอู่ต่อยาน§!\nการปรับเปลี่ยนของฐานอวกาศ:\nความเร็วในการสร้างยาน: §G+30%§!"
