--- a/mod/thmod/localisation/english/apocalypse_l_english.yml
+++ b/mod/thmod/localisation/english/apocalypse_l_english.yml
@@ -104,7 +104,7 @@
  STARBASE_DISMANTLE_LABEL:0 "รื้อ"
  STARBASE_DOWNGRADE_LABEL:0 "ดาวน์เกรด"
  STARBASE_RETURN_LABEL:0 "คืนการควบคุม"
- STARBASE_DISMANTLE_NO_STARBASE_IN_SYSTEM:0 "§RThere is no starbase in the system.§!"
+ STARBASE_DISMANTLE_NO_STARBASE_IN_SYSTEM:0 "§Rไม่มีฐานอวกาศอยู่ในระบบ§!"
  STARBASE_BUILD_NOT_AN_OWNER:0 "§RDoes not own starbase!§!"
  STARBASE_DISMANTLE_NOT_SYSTEM_OWNER:0 "§Rคุณไม่ได้เป็นเจ้าของฐานอวกาศนี้§!"
  STARBASE_DISMANTLE_HAS_COLONIZED_WORLDS:0 "§RYou cannot dismantle a starbase while you have colonized planets in the system.§!"
@@ -159,7 +159,7 @@
  STARBASE_DEFENSE_PLATFORM_CAPACITY:0 "แพลตฟอร์มป้องกัน: $COUNT|Y$/$MAX|Y$"
  STARBASE_DEFENSE_PLATFORM_CAPACITY_DESC:0 "The amount of Defense Platforms that can be built around this Starbase."
  STARBASE_DEFENSE_PLATFORM_CAPACITY_REACHED:0 "Defensive Platform max capacity reached: $MAX|Y$"
- STARBASE_DEFENSE_PLATFORM_NOT_ENOUGH_CAP:0 "There is not enough room for this Platform: missing $OVER_CAP|Y$ slot(s)"
+ STARBASE_DEFENSE_PLATFORM_NOT_ENOUGH_CAP:0 "มีพื้นที่ไม่เพียงพอสำหรับแพลตฟอร์มนี้: หายไป $OVER_CAP|Y$ สล็อต"
  STARBASE_DEFENSE_PLATFORM_UPGRADE:0 "อัปเกรด"
  STARBASE_DEFENSE_PLATFORM_UPGRADE_DESC:0 "อัปเกรดแพลตฟอร์มป้องกัน"
  STARBASE_DEFENSE_PLATFORM_UPGRADE_ALL:0 "อัปเกรดทั้งหมด"
@@ -171,7 +171,7 @@
  DEFENSE_QUEUE:0 "คิวระบบป้องกัน"
  SHIPYARD_QUEUE:0 "คิวอู่ต่อยาน"
  STARBASE_TRIGGER_HAS_NOT_MODULE:0 "Starbase has not module $COMPONENT|Y$"
- STARBASE_TRIGGER_HAS_MODULE:0 "Starbase has module $COMPONENT|Y$"
+ STARBASE_TRIGGER_HAS_MODULE:0 "ฐานอวกาศมีโมดูล $COMPONENT|Y$"
  STARBASE_TRIGGER_HAS_NOT_BUILDING:0 "Starbase has not building $COMPONENT|Y$"
  STARBASE_TRIGGER_HAS_BUILDING:0 "Starbase has building $COMPONENT|Y$"
  budget_group_starbase_maintenance:0 "ค่าบำรุงรักษาฐานอวกาศ"
@@ -210,7 +210,7 @@
  HAS_NUM_ACTIVE_GATEWAYS:0 "Number of active Gateways in the galaxy is $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_OWNED_ACTIVE_GATEWAYS:0 "Number of active Gateways owned by the Empire is NOT $COMPARATOR$ $NUM|Y$"
  HAS_NUM_OWNED_ACTIVE_GATEWAYS:0 "Number of active Gateways owned by the Empire is $COMPARATOR$ $NUM|Y$"
- gateway_0_MEGASTRUCTURE_DETAILS:2 "A portal through subspace that allows instantaneous travel to other §YGateways§!."
+ gateway_0_MEGASTRUCTURE_DETAILS:2 "พอร์ทัลผ่านทางลัดอวกาศย่อยที่ช่วยให้สามารถเดินทางไปยัง §Yเกตเวย์§! อื่นๆ ได้ทันที"
  gateway_0:0 "เกตเวย์ (ที่ตั้ง)"
  gateway_0_DESC:0 "The initial site will serve as the base for the construction of a future Gateway."
  gateway_final:0 "เกตเวย์"
@@ -227,25 +227,25 @@
  TRIGGER_HAS_WORMHOLE:0 "Contains a Wormhole"
  TRIGGER_HAS_WORMHOLE_NOT:0 "Does NOT contain a Wormhole"
  WORMHOLE_NAME:0 "รูหนอน $SYSTEM$"
- requires_outpost:0 "§RRequires §Y$starbase_outpost$§!.§!"
- requires_starport:0 "§RRequires §Y$starbase_starport$§! upgrade.§!"
- requires_starhold:0 "§RRequires §Y$starbase_starhold$§! upgrade.§!"
- requires_starfortress:0 "§RRequires §Y$starbase_starfortress$§! upgrade.§!"
- requires_citadel:0 "§RRequires §Y$starbase_citadel$§! upgrade.§!"
- requires_starport_or_ring:0 "§RRequires §Y$starbase_starport$§! upgrade or §Y$orbital_ring_tier_1$§!.§!"
- requires_starhold_or_ring_2:0 "§RRequires §Y$starbase_starhold$§! upgrade or §Y$orbital_ring_tier_2$§!.§!"
- requires_starfortress_or_ring_3:0 "§RRequires §Y$starbase_starfortress$§! upgrade or §Y$orbital_ring_tier_3$§!.§!"
- requires_anchorage:0 "§RRequires §Y$sm_anchorage$§!.§!"
- requires_detection_array:0 "§RRequires §Y$sm_detection_array$§!.§!"
+ requires_outpost:0 "§Rต้องมี §Y$starbase_outpost$§!§!"
+ requires_starport:0 "§Rต้องอัปเกรดเป็น §Y$starbase_starport$§!§!"
+ requires_starhold:0 "§Rต้องอัปเกรดเป็น §Y$starbase_starhold$§!§!"
+ requires_starfortress:0 "§Rต้องอัปเกรดเป็น §Y$starbase_starfortress$§!§!"
+ requires_citadel:0 "§Rต้องอัปเกรดเป็น §Y$starbase_citadel$§!§!"
+ requires_starport_or_ring:0 "§Rต้องมีการอัปเกรด §Y$starbase_starport$§! หรือ §Y$orbital_ring_tier_1$§!§!"
+ requires_starhold_or_ring_2:0 "§Rต้องมีการอัปเกรด §Y$starbase_starhold$§! หรือ §Y$orbital_ring_tier_2$§!§!"
+ requires_starfortress_or_ring_3:0 "§Rต้องมีการอัปเกรด §Y$starbase_starfortress$§! หรือ §Y$orbital_ring_tier_3$§!§!"
+ requires_anchorage:0 "§Rต้องมี §Y$sm_anchorage$§!§!"
+ requires_detection_array:0 "§Rต้องมี §Y$sm_detection_array$§!§!"
  requires_colonized_planet:0 "§Rต้องมีดาวเคราะห์ที่เป็นเจ้าของในระบบ§!"
  requires_trade_planet:0 "§RRequires a colonized planet or a §YTrader Enclave§! in the system.§!"
  requires_black_hole:0 "§Rต้องมี §Y$pc_black_hole$§! ในระบบดาว§!"
  requires_nebula:0 "§Rต้องการระบบดาวที่อยู่ภายใน§Yเนบิวลา§!§!"
- requires_shattered_world: "§RRequires a §Y$pc_shattered$§! in the system.§!"
- requires_curator:0 "§RRequires a §YCurator Enclave§! in the system.§!"
+ requires_shattered_world: "§Rต้องมี §Y$pc_shattered$§! ในระบบดาว§!"
+ requires_curator:0 "§Rต้องมี §YCurator Enclave§! ในระบบดาว§!"
  requires_curator_agreement:0 "§RRequires a §YDiplomatic Agreement§! with the local Curator Enclave.§!"
  requires_artist_agreement:0 "§RRequires a §YDiplomatic Agreement§! with the local Artisan Enclave.§!"
- requires_artisans:0 "§RRequires an §YArtisan Troupe Enclave§! in the system.§!"
+ requires_artisans:0 "§Rต้องมี §YArtisan Troupe Enclave§! ในระบบดาว§!"
  requires_technology_gateway_activation:0 "$TRIGGER_FAIL$ต้องใช้เทคโนโลยี £physics£ §Y$tech_gateway_activation$§!"
  requires_technology_gateway_construction:0 "$TRIGGER_FAIL$ต้องใช้เทคโนโลยี £physics£ §Y$tech_gateway_construction$§!"
  NAVY_SIZE_STARBASES_TITLE:0 "From Starbases"
