--- a/mod/thmod/localisation/english/distant_stars_l_english.yml
+++ b/mod/thmod/localisation/english/distant_stars_l_english.yml
@@ -1324,15 +1324,15 @@
  RECOVER_WARFORM_PROJECT_DESC:0 "A disabled robotic warship has been found on [From.GetName], where it is slowly being dissolved by the planet's toxic atmosphere. We should attempt to recover it, before it is rendered wholly inoperable."
  BRAINSLUG_PROJECT:0 "Neural Symbiont Study"
  BRAINSLUG_PROJECT_DESC:0 "A symbiotic relationship between a reptilian species and a slug-like creature that attaches to the brain stem of its host once flourished on the surface of [From.GetName], transforming the bestial reptiles into tool-using sapients. Something caused these creatures to terminate their symbiotic relationship, and the reptilian hosts reverted back into mere animals.\n\nOur scientists would like to study the neural slugs still found on the planet more closely, in order to better understand the history of the lost civilization they built together."
- KETLING_PROJECT_1:0 "Study the $NAME_Ketlings$ on §Y[ratling_capital.GetName]§!"
+ KETLING_PROJECT_1:0 "ศึกษา $NAME_Ketlings$ ที่ §Y[ratling_capital.GetName]§!"
  KETLING_PROJECT_1_DESC:1 "Sapient creatures have emerged from the scrap piles on §Y[ratling_capital.GetName]§!. Our scientists are curious whether these aliens, dubbed $NAME_Ketlings$, are descendants of the space-faring civilization that once spanned these systems, or if they have another origin entirely.\n\nWe should be able to choose any planet inhabited by autonomous $NAME_Ketlings$ to conduct this study."
- KETLING_PROJECT_2:0 "Study the $NAME_Ketlings$ on §Y[ratling_planet_2.GetName]§!"
+ KETLING_PROJECT_2:0 "ศึกษา $NAME_Ketlings$ ที่ §Y[ratling_planet_2.GetName]§!"
  KETLING_PROJECT_2_DESC:1 "Sapient creatures have emerged from the scrap piles on §Y[ratling_planet_2.GetName]§!. Our scientists are curious whether these aliens, dubbed $NAME_Ketlings$, are descendants of the space-faring civilization that once spanned these systems, or if they have another origin entirely.\n\nWe should be able to choose any planet inhabited by autonomous $NAME_Ketlings$ to conduct this study."
- KETLING_PROJECT_3:0 "Study the $NAME_Ketlings$ on §Y[ratling_planet_3.GetName]§!"
+ KETLING_PROJECT_3:0 "ศึกษา $NAME_Ketlings$ ที่ §Y[ratling_planet_3.GetName]§!"
  KETLING_PROJECT_3_DESC:1 "Sapient creatures have emerged from the scrap piles on §Y[ratling_planet_3.GetName]§!. Our scientists are curious whether these aliens, dubbed $NAME_Ketlings$, are descendants of the space-faring civilization that once spanned these systems, or if they have another origin entirely.\n\nWe should be able to choose any planet inhabited by autonomous $NAME_Ketlings$ to conduct this study."
- KETLING_PROJECT_4:0 "Study the $NAME_Ketlings$ on §Y[ratling_planet_4.GetName]§!"
+ KETLING_PROJECT_4:0 "ศึกษา $NAME_Ketlings$ ที่ §Y[ratling_planet_4.GetName]§!"
  KETLING_PROJECT_4_DESC:1 "Sapient creatures have emerged from the scrap piles on §Y[ratling_planet_4.GetName]§!. Our scientists are curious whether these aliens, dubbed $NAME_Ketlings$, are descendants of the space-faring civilization that once spanned these systems, or if they have another origin entirely.\n\nWe should be able to choose any planet inhabited by autonomous $NAME_Ketlings$ to conduct this study."
- KETLING_PROJECT_5:0 "Study the $NAME_Ketlings$ on §Y[ratling_planet_5.GetName]§!"
+ KETLING_PROJECT_5:0 "ศึกษา $NAME_Ketlings$ ที่ §Y[ratling_planet_5.GetName]§!"
  KETLING_PROJECT_5_DESC:1 "Sapient creatures have emerged from the scrap piles on §Y[ratling_planet_5.GetName]§!. Our scientists are curious whether these aliens, dubbed $NAME_Ketlings$, are descendants of the space-faring civilization that once spanned these systems, or if they have another origin entirely.\n\nWe should be able to choose any planet inhabited by autonomous $NAME_Ketlings$ to conduct this study."
  SEALED_SYSTEM_PROJECT:0 "Abandoned Wormhole Station"
  SEALED_SYSTEM_PROJECT_DESC:0 "An abandoned station spins at the mouth of the §Y[From.GetName]§! System wormhole. Deeper investigation may explain who built it, and why the wormhole appears to be entirely non-traversable."
@@ -1871,7 +1871,7 @@
  graygoo.500.title:0 "Gray"
  graygoo.500.a.desc:0 "Shall we get started?"
  graygoo.500.b.desc:0 "This is gonna be great."
- graygoo.500.c.desc:0 "I won't be much good to you until you tell me which form to assume."
+ graygoo.500.c.desc:0 "ฉันจะไม่มีประโยชน์ต่อคุณมากนักจนกว่าคุณจะบอกว่าฉันควรอยู่ในรูปแบบใด"
  graygoo.500.d.desc:0 "Where do you want me, boss?"
  graygoo.500.allow.a:0 "Gray must not be in combat"
  graygoo.500.allow.b:0 "Gray must not be damaged"
@@ -1967,7 +1967,7 @@
  liquidated_2:0 "§Y2 $clues$§! Liquidated:\n §G+1000§! £engineering£  Engineering Research\n §G+1000§! £energy£ Energy Credits"
  liquidated_1:0 "§Y1 $clue$§! Liquidated:\n §G+500§! £engineering£  Engineering Research\n §G+500§! £energy£ Energy Credits"
  liquidated_0:0 "Search for §Y$clues$§! ended"
- NO_SHIP_TO_UPGRADE:0 "No item requires an upgrade"
+ NO_SHIP_TO_UPGRADE:0 "ไม่มีของที่ต้องการการอัปเกรด"
  CANT_AFFORD_UPGRADE:0 "Can't afford the cost of $COST|R$"
  tech_experimental_subspace_navigation:0 "การทำลายไฮเปอร์เลนที่มีความเสี่ยง"
  tech_experimental_subspace_navigation_desc:0 "Solitary Science Ships can break out of the naturally-occurring hyperlanes and attempt to navigate to known but otherwise unreachable destinations."
@@ -2026,8 +2026,8 @@
  MESSAGE_PLANET_PROSPECTED:0 "$PLANET|Y$ was successfully prospected, revealing a new $DEPOSIT|Y$"
  MESSAGE_REFUGEES_ARRIVED_TITLE:0 "ผู้ลี้ภัยมาถึงแล้ว"
  MESSAGE_REFUGEES_ARRIVED:0 "ผู้ลี้ภัยชาว $SPECIES|Y$ หลบหนีจาก $COUNTRY|Y$ มาที่ดาว $PLANET|Y$"
- MESSAGE_SR_INFORMED_TITLE:0 "Strategic Resource Information"
- MESSAGE_SR_INFORMED:0 "We have learned of a new §HStrategic Resource§! encountered on §Y$PLANET$§! in the territories of §Y$COUNTRY$§!."
+ MESSAGE_SR_INFORMED_TITLE:0 "ข้อมูลทรัพยากรเชิงยุทธศาสตร์"
+ MESSAGE_SR_INFORMED:0 "เรารู้ข้อมูลเกี่ยวกับ §Hทรัพยากรเชิงยุทธศาสตร์§! ใหม่ บนดาว §Y$PLANET$§! ในดินแดนของ §Y$COUNTRY$§!"
  apoc.1.b.desc:0 "We have encountered another abandoned Gateway, this time in the §H[gateway_system.GetName]§! system. Unlike the previous one, this Gateway has not been altered in any obvious way and our scans indicate that it is still connected to the rest of the network. However, it is currently inoperable due to its poor condition."
  apoc.3.b.desc:0 "We have encountered another abandoned Gateway, this time near §H[gateway_system.GetName]§!. It appears to have been built entirely by microscopic §HNanites§! of an unknown design.\n\nUnlike the previous structure, this Gateway has been significantly altered since its initial construction. Its connection to the rest of the network has been severed - instead, the only valid destination is an uncharted group of stars just beyond our galaxy that has been designated the §HL-Cluster§! by our astronomers.\n\nAlthough the Gateway emits a faint power signature, it has been deliberately locked into some kind of maintenance loop that prevents its activation. Until we find some way of aborting this process, the L-Cluster will remain beyond our reach."
  pirate.26.desc:0 "The [pirate_slayers.GetName] has destroyed a pirate station in the [pirate_slayers.GetStarName] system, and recovered its strong room module.\n\nAside from various stolen resources, the module also contained an ancient datapad with partial schematics of what appears to be a subspace Gateway. There are no records of where the pirates obtained this mysterious datapad, but it has furthered our understanding of how the galactic Gateway network functions."
@@ -2112,7 +2112,7 @@
  DISTAR_NANOSAND_CAT_DESC:0 "Scanners indicate the sandy dunes of [From.GetName] are almost entirely composed of granulate rare metals. Perhaps some valuable resources could be extracted from them."
  DISTAR_MEDGAS_CAT:0 "Solid Core"
  DISTAR_MEDGAS_CAT_DESC:0 "Despite expected projections, [From.GetName] has a particularly large solid core beneath its incredibly thick mantle of unique gases. Our scientists recommend further investigation."
- KETLING_PROJECT_6:0 "Study the $NAME_Ketlings$ on §Y[ratling_planet_6.GetName]§!"
+ KETLING_PROJECT_6:0 "ศึกษา $NAME_Ketlings$ ที่ §Y[ratling_planet_6.GetName]§!"
  KETLING_PROJECT_6_DESC:1 "Sapient creatures have emerged from the scrap piles on §Y[ratling_planet_6.GetName]§!. Our scientists are curious whether these aliens, dubbed $NAME_Ketlings$, are descendants of the space-faring civilization that once spanned these systems, or if they have another origin entirely.\n\nWe should be able to choose any planet inhabited by autonomous $NAME_Ketlings$ to conduct this study."
  distar.242.desc.jump:0 "The [Root.GetName] has encountered a massive being of pure energy in the [From.GetName] System! A veritable vortex of psionic forces, this entity should only be approached with the utmost caution.\n\nBafflingly, the [From.GetName] system itself seems to be entirely devoid of any connection to the subspace hyperlane network. Whether this entity's presence has severed the system's hyperlane connections, or if unexpected subspace fluctuations trapped it here is unknown.\n\nOne matter is known, however: we are picking up a repeating signal in this system, originating from [tanker_planet.GetName] - though we may need to deal with the entity before we can reach it."
  distar.275.name:0 "Nanite Crystal Lattices"
