--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -331,7 +331,7 @@
  resolution_repeal_tiyanki_pest_control:0 "§Rยกเลิก $resolution_tiyanki_pest_control$§!"
  resolution_repeal_tiyanki_pest_control_effect_success:0 "ยกเลิกมติ §Y$resolution_tiyanki_pest_control$§!"
  resolution_repeal_tiyanki_pest_control_desc:0 "The Galactic Community has no place forcing its members to destroy the Tiyanki on sight."
- resolution_galacticreforms_motions_for_closure:0 "Motions for Closure"
+ resolution_galacticreforms_motions_for_closure:0 "เคลื่อนไหวเพื่อให้หยุดโต้เถียง"
  resolution_galacticreforms_motions_for_closure_desc:0 "When the Galactic Community is largely in agreement, it seems like a waste to continue debate for the full duration of the session. If we reach a consensus, we should end debate early and move on to other matters."
  resolution_galacticreforms_motions_for_closure_effect_success:0 "Senate sessions will end early if there is a supermajority of 75% in favor or against the resolution for 180 consecutive days."
  resolution_galacticreforms_repeal_motions_for_closure:0 "ยกเลิก $resolution_galacticreforms_motions_for_closure$"
@@ -374,16 +374,16 @@
  resolution_divinity_repeal_1_effect_success:0 "ยกเลิกมติ §Y$resolution_divinity_comfort_the_fallen$§!"
  resolution_divinity_repeal_2:0 "§Rยกเลิก $resolution_divinity_tithe_on_the_soulless$§!"
  resolution_divinity_repeal_2_desc:0 "$resolution_divinity_repeal_1_desc$"
- resolution_divinity_repeal_2_effect_success:2 "Repeals the §Y$resolution_divinity_tithe_on_the_soulless$§! resolution, leaving §Y$resolution_divinity_comfort_the_fallen$§! as galactic law."
+ resolution_divinity_repeal_2_effect_success:2 "ยกเลิกมติ §Y$resolution_divinity_tithe_on_the_soulless$§! แล้วออก §Y$resolution_divinity_comfort_the_fallen$§! เป็นกฎหมายกาแล็กติก"
  resolution_divinity_repeal_3:0 "§Rยกเลิก $resolution_divinity_right_to_work$§!"
  resolution_divinity_repeal_3_desc:0 "$resolution_divinity_repeal_1_desc$"
- resolution_divinity_repeal_3_effect_success:2 "Repeals the §Y$resolution_divinity_right_to_work$§! resolution, leaving §Y$resolution_divinity_tithe_on_the_soulless$§! as galactic law."
+ resolution_divinity_repeal_3_effect_success:2 "ยกเลิกมติ §Y$resolution_divinity_right_to_work$§! แล้วออก §Y$resolution_divinity_tithe_on_the_soulless$§! เป็นกฎหมายกาแล็กติก"
  resolution_divinity_repeal_4:0 "§Rยกเลิก $resolution_divinity_silence_the_soulless$§!"
  resolution_divinity_repeal_4_desc:0 "$resolution_divinity_repeal_1_desc$"
- resolution_divinity_repeal_4_effect_success:2 "Repeals the §Y$resolution_divinity_silence_the_soulless$§! resolution, leaving §Y$resolution_divinity_right_to_work$§! as galactic law."
+ resolution_divinity_repeal_4_effect_success:2 "ยกเลิกมติ §Y$resolution_divinity_silence_the_soulless$§! แล้วออก §Y$resolution_divinity_right_to_work$§! เป็นกฎหมายกาแล็กติก"
  resolution_divinity_repeal_5:0 "§Rยกเลิก $resolution_divinity_a_defined_purpose$§!"
  resolution_divinity_repeal_5_desc:0 "$resolution_divinity_repeal_1_desc$"
- resolution_divinity_repeal_5_effect_success:2 "Repeals the §Y$resolution_divinity_a_defined_purpose$§! resolution, leaving §Y$resolution_divinity_silence_the_soulless$§! as galactic law.\n\n"
+ resolution_divinity_repeal_5_effect_success:2 "ยกเลิกมติ §Y$resolution_divinity_a_defined_purpose$§! แล้วออก §Y$resolution_divinity_silence_the_soulless$§! เป็นกฎหมายกาแล็กติก\n\n"
  federations.10340.desc:0 "The Galactic Community has passed the §Y$resolution_divinity_a_defined_purpose$§! resolution, which bans the §Y$ai_full_rights_name$§! $policy_artificial_intelligence_policy$ policy and non-§YRogue Servitor§! Machine Intelligences.\n\nOur Empire is currently in breach of this resolution. Shall we change our policies to be in compliance?"
  federations.10340.declinemachine:0 "$federations.10230.assimilator$"
  federations.10340.complychangeai:0 "$federations.10100.change_ai$"
@@ -404,7 +404,7 @@
  galcom.107.desc:0 "Officials from the Galactic Community have protested our recent killing of Tiyanki in the §H[tiyanki_kill_system.GetName]§! system, informing us that our actions have violated the Tiyanki Conservation Act. As a consequence, the [Root.GetName] is to be considered in §RBreach of Galactic Law§! for the next ten years.\n\nThe resources we extracted from the dead Tiyanki have been confiscated, and we have been issued a fine."
  galcom.107.a:0 "This is an outrage!"
  galcom.109.desc:0 "Officials from the Galactic Community have observed the presence of Tiyanki within the borders of the [Root.GetName]. With the Tiyanki Pest Control resolution having been enacted, this leaves us in §RBreach of Galactic Law§! until the creatures are euthanized or leave our space of their own accord."
- resolution_amoeba_conservation_act:0 "Space Amoeba Protection Act"
+ resolution_amoeba_conservation_act:0 "กฎหมายคุ้มครองอะมีบาอวกาศ"
  resolution_amoeba_conservation_act_desc:0 "Despite their unseeming looks, the Space Amoebas have as much right to roam the galaxy as any species. They must be treated as a form of life worth cherishing, not as vermin to be hunted down."
  resolution_amoeba_conservation_act_tooltip:0 "Any empire that does not agree to peacefully coexist with §YSpace Amoebas§! will be considered in §RBreach of Galactic Law§!."
  resolution_repeal_amoeba_conservation_act:0 "§Rยกเลิก $resolution_amoeba_conservation_act$§!"
