--- a/mod/thmod/localisation/english/marauder_l_english.yml
+++ b/mod/thmod/localisation/english/marauder_l_english.yml
@@ -179,7 +179,7 @@
  marauder.76.name:0 "[marauder_species.GetName] Mercenaries Vanish"
  marauder.76.desc:0 "The loss of their home systems seem to have badly shaken the §H[marauder_species.GetName]§! mercenaries in the [Root.GetName]. In spite of the five-year contract we signed with them, the treacherous brigands and all of their ships have vanished into deep space!\n\nTheir last transmission, apparently a code-phrase to signal their departure, was:\n\n§R"Vengeance shall be ours."§!"
  marauder.76.a:0 "We had a contract!"
- marauder.77.name:0 "Mercenaries Join Great Khan"
+ marauder.77.name:0 "ทหารรับจ้างเข้าร่วมกับข่าน"
  marauder.77.desc:0 "The rise of the [raider_khanate.GetName] under their vaunted Great Khan has triggered mass defections among all of the [raider_khanate.GetSpeciesName] mercenaries that were in our employ! Caught up in a sudden influx of nationalistic fervor, the traitors have all abandoned their contracts and left to join the Great Khan's growing war machine."
  marauder.86.a.desc:0 "โปรดทราบ [Root.GetSpeciesNamePlural]\n\nหากคุณต้องการคนอื่นมาสู้รบแทนคุณ โปรดทราบว่ากองทหารรับจ้าง [marauder_mercenary_country.GetSpeciesName] พร้อมให้บริการแล้ว ใช่! คุณได้ยินถูกต้องแล้ว หากคุณจ่ายให้เราในตอนนี้ ทหารรับจ้างที่เก่งที่สุดในกาแล็กซี ก็พร้อมที่จะต่อสู้เพื่อคุณ"
  marauder.86.a:0 "ขอบคุณที่บอก"
@@ -251,26 +251,26 @@
  marauder.124.name:0 "[raiding_marauder.GetSpeciesName] Raiding Fleet Destroyed"
  marauder.124.desc:0 "The raiding fleet that we "encouraged" the [raiding_marauder.GetSpeciesNamePlural] to put together has been destroyed in the [destroyed_fleet_system.GetName] system by forces belonging to the [fleet_destroyer.GetName]! There are no reports of survivors."
  marauder.124.a:0 "They hopefully did some damage at least."
- marauder.501.name:0 "The Drums of War"
- marauder.501.desc:0 "For the first time in recorded history, the warring factions of the §H[raider_khanate.GetSpeciesNamePlural]§! have united under a single §HGreat Khan§!. This mysterious warlord, who according to some accounts is a powerful psychic, has emerged from their warrior caste and accomplished what most thought impossible. Through a combination of guile, charisma and military genius, the newly crowned Great Khan has won the utter loyalty and devotion of all [raider_khanate.GetSpeciesName] factions.\n\nNow that they are no longer busy killing each other, the [raider_khanate.GetSpeciesNamePlural] are turning their attention elsewhere. Great fleets are massing for war, crewed by eager warriors who are now steadfast comrades in arms despite having been mortal enemies mere months ago."
- marauder.501.a:0 "A new threat is born."
- marauder.502.desc:0 "I am §H[raider_khanate.Ruler.GetName]§!, Great Khan of the §H[raider_khanate.GetName]§!, and I am here to announce to the galaxy that a new age is upon us. The dark era where [raider_khanate.GetSpeciesNamePlural] would senselessly butcher one another for scraps of resources or a misguided sense of honor has finally come to an end.\n\nI have solemnly promised my people a new beginning through the formation of a great empire that will forever enshrine the name of the [raider_khanate.GetSpeciesName] species in the annals of galactic history.\n\nTo those who would stand in our way, know this: I will stop at nothing to realize the true destiny of my people. If you oppose us, the [raider_khanate.GetName] will grind you into dust."
- marauder.502.a:0 "Strong words."
- marauder.502.b:0 "Calculating threat vector."
+ marauder.501.name:0 "ลั่นกลองรบ"
+ marauder.501.desc:0 "นับเป็นครั้งแรกในประวัติศาสตร์ที่บันทึกไว้ว่าฝ่ายต่างๆของ §H[raider_khanate.GetSpeciesNamePlural]§! ที่ทำสงครามกัน ได้รวมตัวกันภายใต้ §Hข่านผู้ยิ่งใหญ่§! ขุนศึกลึกลับผู้นี้ ซึ่งตามตำนานเล่าว่าเป็นผู้มีพลังจิตที่ทรงพลัง ได้ออกมาจากวรรณะนักรบ และทำสิ่งที่คนส่วนใหญ่คิดว่าเป็นไปไม่ได้สำเร็จ ด้วยการมีเล่ห์เหลี่ยม ความสามารถพิเศษ และอัจฉริยะทางการทหาร ข่านผู้สวมมงกุฎคนใหม่นี้ จะได้รับความภักดีและความทุ่มเทอย่างที่สุดจากฝ่าย [raider_khanate.GetSpeciesName] ทั้งหมด\n\nตอนนี้พวกเขาเลิกฆ่ากันเองแล้ว [raider_khanate.GetSpeciesNamePlural] และหันความสนใจไปที่อื่นแทน กองยานรบขนาดใหญ่กำลังรวมตัวกันเพื่อทำสงคราม โดยมีนักรบผู้กระตือรือร้นซึ่งปัจจุบันกลายเป็นสหายร่วมรบที่แน่วแน่ แม้ว่าจะเคยเป็นศัตรูคู่อาฆาตเมื่อไม่กี่เดือนก่อนก็ตาม"
+ marauder.501.a:0 "ภัยคุกคามครั้งใหม่เริ่มขึ้นแล้ว"
+ marauder.502.desc:0 "ข้าคือ §H[raider_khanate.Ruler.GetName]§!, ข่านของ §H[raider_khanate.GetName]§!, และข้ามาที่นี่เพื่อประกาศให้กาแล็กซีรู้ว่ายุคใหม่กำลังมาถึงเราแล้ว ยุคมืดที่ [raider_khanate.GetSpeciesNamePlural] เข่นฆ่ากันอย่างไร้เหตุผล ได้สิ้นสุดลงแล้ว\n\nข้าสัญญากับผู้คนของข้าในการเริ่มต้นใหม่ผ่านการก่อตั้งอาณาจักรอันยิ่งใหญ่ที่จะจารึกชื่อเผ่าพันธุ์ [raider_khanate.GetSpeciesName] ไว้ในบันทึกประวัติศาสตร์กาแล็กซีตลอดไป\n\nสำหรับผู้ที่ยืนขวางทางเรา จงรู้ไว้: ข้าจะทำทุกอย่างเพื่อให้แน่ใจว่าคนของข้าบรรลุบรรลุเป้าหมาย หากคุณต่อต้านเรา [raider_khanate.GetName] จะบดขยี้คุณให้เป็นฝุ่น"
+ marauder.502.a:0 "สุนทรพจน์ทรงพลัง"
+ marauder.502.b:0 "กำลังคำนวณเวกเตอร์ภัยคุกคาม"
  marauder.504.name:0 "Great Khan Seizes [conquered_planet.GetName]!"
  marauder.504.desc:0 "After defeating the brave defenders of §H[conquered_planet.GetName]§!, ground forces from the [From.GetName] have claimed the [conquered_planet.GetPlanetMoon] in the name of their Great Khan! They have raised the banner of their new empire over every major settlement on the [conquered_planet.GetPlanetMoon]'s surface. Even now, [From.GetSpeciesName] colonists are being ferried in from their decaying space habitats."
  marauder.504.a:0 "The Great Khan must be stopped!"
- marauder.506.name:0 "Great Khan Meets Defeat"
+ marauder.506.name:0 "ข่านผู้ยิ่งใหญ่พบกับความพ่ายแพ้"
  marauder.506.desc:0 "In spite of [great_khan.GetHerHis] vaunted military genius, [great_khan.GetName], the Great Khan of the [From.GetName], has met with defeat in the [khan_death_system.GetName] system. When the armada [great_khan.GetSheHe] [great_khan.GetWasWere] commanding was lost in battle against forces belonging to the [khan_destroyer.GetName], the Great Khan and [great_khan.GetHerHis] closest officers fled into hyperspace in a small shuttlecraft.\n\nEven now, [great_khan.GetName] is busy assembling a new armada to resume [great_khan.GetHerHis] conquests, but this victory has brought some much needed respite to those who oppose the relentless advance of the [From.GetName]."
- marauder.506.a:0 "So the Great Khan is not infallible."
+ marauder.506.a:0 "ข่านผู้ยิ่งใหญ่ไม่เคยผิดพลาด"
  marauder.508.desc:2 "This is Great Khan [great_khan.GetName] of the [From.GetName]. My defeat at the hands of the [khan_destroyer.GetRealName] was a minor setback - nothing more. The [khan_destroyer.GetSpeciesNamePlural] are brave warriors and worthy opponents, but they, too, will fall before us.\n\nThe tide of history is sweeping across the galaxy, and nothing can stop it. My new armada has been assembled."
  marauder.508.desc.1:0 "$marauder.508.desc$ After this war is over, my loyal Satraps shall be rewarded for their support."
  marauder.508.desc.2:0 "$marauder.508.desc$ Swear fealty to me now, while you still have time."
  marauder.508.desc.3:0 "$marauder.508.desc$ All who attempt to stand in my way shall be vanquished."
- marauder.508.a:0 "A second onslaught approaches..."
- marauder.510.name:0 "The Death of the Great Khan"
+ marauder.508.a:0 "การโจมตีครั้งที่สองกำลังใกล้เข้ามา..."
+ marauder.510.name:0 "ความตายของข่านผู้ยิ่งใหญ่"
  marauder.510.desc:0 "Great Khan [great_khan.GetName] is dead. After [great_khan.GetHerHis] armada met with defeat a second time in the [khan_death_system.GetName] system, the Great Khan made no attempt to escape [great_khan.GetHerHis] flagship when it was destroyed in battle by the [khan_destroyer.GetName].\n\nWith their beloved leader gone, a vicious power struggle has erupted in the [From.GetName]. The Great Khan's warlords are now fighting each other for control over [great_khan.GetHerHis] empire. It remains to be seen who will emerge on top."
- marauder.510.a:0 "So ends the reign of [great_khan.GetName]."
+ marauder.510.a:0 "สิ้นสุดอำนาจของ [great_khan.GetName]"
  marauder.513.a.desc:0 "Great Khan [great_khan.GetName] of the [raider_khanate.GetName] is dead! Details are scarce at this point, but intercepted communications indicate that the Great Khan was poisoned by one of [great_khan.GetHerHis] more ambitious warlords in an attempted coup.\n\nWith their beloved leader gone, a vicious power struggle has erupted in the [raider_khanate.GetName]. The Great Khan's warlords are now fighting each other over control of [great_khan.GetHerHis] empire. It remains to be seen who will emerge on top."
  marauder.513.b.desc:0 "Great Khan [great_khan.GetName] of the [raider_khanate.GetName] is dead! According to intercepted communications, the Great Khan succumbed to Sarakellian Fever, a relatively common and often fatal disease found among [raider_khanate.GetSpeciesNamePlural] - a legacy of the poor living conditions on the space stations where most of them lived before the rise of the [raider_khanate.GetName]."
  marauder.513.c.desc:0 "Great Khan [great_khan.GetName] of the [raider_khanate.GetName] is dead! Intercepted communications suggest that the Great Khan was violently assassinated by a special forces team in the employ of an as yet unidentified galactic power. No government has been willing to claim responsibility for this operation."
@@ -314,7 +314,7 @@
  marauder.550.o.desc:0 "I understand that [Root.GetSpeciesName] drones obey the commands of their Hive Mind without question. As long as your Hive Mind serves me in a similar fashion, we shall have no problems."
  marauder.550.p.desc:0 "You were wise to submit to my rule. This decision saved countless [Root.GetSpeciesName] lives."
  marauder.550.q.desc:0 "[Root.GetSpeciesNamePlural] and [raider_khanate.GetSpeciesNamePlural] are not very different, you know. Your kind will have an important role to play in the galactic empire we are building together."
- marauder.550.a:0 "We would like to discuss surrender..."
+ marauder.550.a:0 "เราอยากจะหารือเรื่องการยอมจำนน..."
  marauder.550.a.2.response:0 "Do you think I am fool enough to trust [Root.GetSpeciesName] lies a second time? No, this time the fight is to the end. You have forfeited your right to exist in the new galactic order I am building."
  marauder.550.b:0 "You seem very... articulate for a [From.GetSpeciesName]."
  marauder.550.b.response:0 "Ah, yes. You are perhaps referring to the somewhat crude and... shall we say, rustic dialect that has been used by [From.GetSpeciesNamePlural] up until now.\n\nYou may not believe this, but the [From.GetSpeciesName] language was once far more developed. It is only in the last thousand years or so that it has gradually devolved into its current sorry state.\n\nBut that changes now. Henceforth, all [From.GetSpeciesNamePlural] will be educated in the older, richer version of our language. There shall be no more shrieking."
@@ -322,12 +322,12 @@
  marauder.550.c.response:0 "Superstitious beliefs and religious dogma have brought nothing but ruin to the [From.GetSpeciesName] people. Those who wish to continue in their worship of She of the Void, or any other spiritual symbol for that matter, are free to do so, but it is no longer mandatory.\n\nI mean to bring about a new age of science and progress for [From.GetSpeciesNamePlural] and, indeed, for the whole of the galaxy. Narrow-minded zealots have no place in the future I am building."
  marauder.550.d:0 "We want our autonomy back."
  marauder.550.d_fail:0 "§RYou cannot rebel until one year has passed since submitting to the Great Khan.§!"
- marauder.551.a.desc:2 "A wise choice. Upon your surrender, you will become a Satrapy of the [raider_khanate.GetName], and be expected to contribute resources and military personnel to our ongoing wars. Beyond that, however, you will not be required to take part in the actual fighting, and I am content to leave you to your own devices until we have secured the galaxy.\n\n§YBecoming a Satrapy will result in:§!\n§R£energy£ -30% Energy Credit income\n£minerals£ -30% Mineral income\n£food£ -30% Food income\n£navy_size£ -30% Naval Capacity§!\n\nThe [raider_khanate.GetName] will grow more powerful."
+ marauder.551.a.desc:2 "A wise choice. Upon your surrender, you will become a Satrapy of the [raider_khanate.GetName], and be expected to contribute resources and military personnel to our ongoing wars. Beyond that, however, you will not be required to take part in the actual fighting, and I am content to leave you to your own devices until we have secured the galaxy.\n\n§Yการตกเป็นเขตปกครอง(บริวาร)มีผลดังนี้:§!\n§R£energy£ เครดิตพลังงาน (รายรับ) -30%\n£minerals£ แร่ (รายรับ) -30%\n£food£ อาหาร (รายรับ) -30%\n£navy_size£ ความจุของยานรบ -30% §!\n\nThe [raider_khanate.GetName] will grow more powerful."
  marauder.551.a.response:0 "You may now consider yourselves loyal servants of the Great Khan of the [raider_khanate.GetName]. With the signing of this accord, countless [Root.GetSpeciesName] lives have been saved. This is a great day for the [Root.GetName].\n\nOnce my conquest of the galaxy has been completed, we shall see about revising the Satrapy system and perhaps integrating your realm more closely into my empire. Until then, I leave you to rule yourselves."
  marauder.551.b.response:0 "Ha! That shall never come to pass.\n\nYour fate will be decided on the field of battle then, [Root.GetSpeciesNamePlural]. It makes no difference to me - your worlds will be claimed by the [raider_khanate.GetName] one way or another."
- marauder.551.a:0 "We accept your terms."
- marauder.551.a.tt:0 "§Y[This.GetName]§! becomes a Satrapy under the §Y[raider_khanate.GetName]§!"
- marauder.551.b:0 "You misunderstand. We meant §Hyour§! surrender."
+ marauder.551.a:0 "เรายอมรับเงื่อนไขของคุณ"
+ marauder.551.a.tt:0 "§Y[This.GetName]§! ตกเป็นเขตปกครอง(บริวาร)ภายใต้ §Y[raider_khanate.GetName]§!"
+ marauder.551.b:0 "เข้าใจผิดแล้ว เราหมายถึง §Hคุณ§! ต้องยอมจำนน"
  marauder.552.name:0 "[From.GetName] Submits!"
  marauder.552.desc:0 "The §H[new_satrapy.GetName]§! has submitted to the Great Khan! They have been made a Satrapy of the [raider_khanate.GetName], and their fleets are now standing down.\n\nAlthough they have not officially joined the [raider_khanate.GetSpeciesNamePlural] in their attempted conquest of the galaxy, they have pledged to contribute resources and military personnel to further bolster the Great Khan's war machine."
  marauder.552.a:0 "Spineless cowards!"
@@ -364,7 +364,7 @@
  marauder.661.2.desc:0 "The former Satrapies of the Horde have been given the offer to join this new federation as equal partners, or to formally secede and have their full independence returned."
  marauder.661.a:0 "We shall see what comes of this."
  marauder.665.a.desc:0 "§Y<< The death of the Great Khan has thrown the [From.GetSpeciesName] Horde into disarray. No one is willing or able to receive your call. >>§!"
- marauder.665.a:0 "What is happening over there?"
+ marauder.665.a:0 "เกิดอะไรขึ้นที่นั่น?"
  marauder.670.name:0 "จุดจบของบริวารข่านผู้ยิ่งใหญ่"
  marauder.670.desc:1 "With chaos and instability following in the wake of the Great Khan's death, our status as a Satrapy within the Horde is void - our oath of fealty was to the Great Khan alone. We are once more free to pursue our own destiny.\n\nAll Horde military personnel that were stationed in the [Root.Capital.solar_system.GetName] system have abandoned their posts to join their people elsewhere, after first demolishing any war material left behind."
  marauder.670.a:0 "We are free."
