--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -250,7 +250,7 @@
  TRADE_VALUE_TOOLTIP_DESC_DETAILED:0 "§Rเนื่องจาก$PIRACY$ตามเส้นทางการค้า§! ทำให้ §Y$AMOUNT|1$%§! §Rของมูลค่าการค้าคือ £trade_value£$TRADE_VALUE|1Y$ สูญหายก่อนที่จะไปถึงปลายทาง§!"
  TRADE_VALUE_TOOLTIP_DESC_PROTECTION:1 "§E- เส้นทางการค้านี้ขนส่ง £trade_value£$TRADE_VALUE|1Y$ ผ่าน $SYSTEMS|0Y$ ระบบดาว\n- กองยานที่จะ §Hลาดตระเวน§! ตามเส้นทางนี้เพื่อ §Hปราบปรามสลัดอวกาศ§! จะต้องมีค่าปราบปรามสลัดอวกาศอย่างน้อย $SUPPRESSION|Y0$ จึงจะรักษาจำนวน §Hสลัดอวกาศ§! ให้อยู่ในระดับต่ำได้§!"
  TRADE_VALUE_PIRATED_DESC:0 "§Rเรากำลังสูญเสียมูลค่าการค้าจากการปล้นสะดม§!"
- TRADE_VALUE_BLOCKED_DESC:0 "§RNo trade value is passing trough due to the system being blocked by hostiles§!"
+ TRADE_VALUE_BLOCKED_DESC:0 "§Rไม่มีมูลค่าการค้าถูกส่งผ่านเนื่องจากระบบถูกบล็อกโดยศัตรู§!"
  planetary_ascension:0 "ระดับของดาวเคราะห์"
  planet_forced_growth:0 "Forced Growth"
  planet_forced_decline:0 "Forced Decline"
@@ -596,10 +596,10 @@
  building_nanite_transmuter_desc:3 "This factory mass-produces a variety of rare resources using extremely advanced nanites. A Nanite deficit will halt production."
  building_hab_major_capital:0 "ที่อยู่อาศัยที่ควบคุมจากส่วนกลาง (เมืองหลวง)"
  building_hab_major_capital_desc:1 "สำนักงานระบบราชการที่ซับซ้อนกว้างขวางซึ่งดูแลการบริหารที่อยู่อาศัยที่มีประชากรสูง"
- building_hab_major_capital_tooltip: "£mod_planet_max_districts_add£ Max District Slots from $major_orbital_plural$: §G+0.25§!\n£mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$ from $major_orbital_generic_plural$: §G+0.25§!\n"
- building_hab_system_capital: "Habitat System Control"
+ building_hab_major_capital_tooltip: "£mod_planet_max_districts_add£ สล็อตช่องเขตสูงสุด จาก $major_orbital_plural$: §G+0.25§!\n£mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$ จาก $major_orbital_generic_plural$: §G+0.25§!\n"
+ building_hab_system_capital: "ระบบควบคุมที่อยู่อาศัย"
  building_hab_system_capital_desc: "A huge sprawling complex of bureaucratic offices that oversees the administration of a highly-populated habitat."
- building_hab_system_capital_tooltip: "£mod_planet_max_districts_add£ Max District Slots from $major_orbital_plural$: §G+0.50§!\n£mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$ from $major_orbital_generic_plural$: §G+0.50§!\n"
+ building_hab_system_capital_tooltip: "£mod_planet_max_districts_add£ สล็อตช่องเขตสูงสุด จาก $major_orbital_plural$: §G+0.50§!\n£mod_planet_max_buildings_add£ $MOD_PLANET_MAX_BUILDINGS_ADD$ จาก $major_orbital_generic_plural$: §G+0.50§!\n"
  district_hab_housing:0 "เขตที่อยู่อาศัย"
  district_hab_housing_plural:0 "เขตที่อยู่อาศัย"
  district_hab_housing_desc:1 "A habitat housing district provides comfortable, if compact residences for its population."
@@ -1750,21 +1750,21 @@
  requires_building_resort_major_capital:0 "§Rต้องการ §Y$building_resort_major_capital$§! บนดาว§!"
  requires_building_slave_capital:0 "§Rต้องการ §Y$building_slave_capital$§! บนดาว§!"
  requires_building_slave_major_capital:0 "§Rต้องการ §Y$building_slave_major_capital$§! บนดาว§!"
- enclave_trade_1_xur:0 "Xuran Deal (£exotic_gases£ x1)"
- enclave_trade_2_xur:0 "Xuran Deal (£exotic_gases£ x2)"
- enclave_trade_3_xur:0 "Xuran Deal (£exotic_gases£ x3)"
- enclave_trade_4_xur:0 "Xuran Deal (£exotic_gases£ x4)"
- enclave_trade_5_xur:0 "Xuran Deal (£exotic_gases£ x5)"
- enclave_trade_1_rig:0 "Riggan Deal (£volatile_motes£ x1)"
- enclave_trade_2_rig:0 "Riggan Deal (£volatile_motes£ x2)"
- enclave_trade_3_rig:0 "Riggan Deal (£volatile_motes£ x3)"
- enclave_trade_4_rig:0 "Riggan Deal (£volatile_motes£ x4)"
- enclave_trade_5_rig:0 "Riggan Deal (£volatile_motes£ x5)"
- enclave_trade_1_mut:0 "Muutagan Deal (£rare_crystals£ x1)"
- enclave_trade_2_mut:0 "Muutagan Deal (£rare_crystals£ x2)"
- enclave_trade_3_mut:0 "Muutagan Deal (£rare_crystals£ x3)"
- enclave_trade_4_mut:0 "Muutagan Deal (£rare_crystals£ x4)"
- enclave_trade_5_mut:0 "Muutagan Deal (£rare_crystals£ x5)"
+ enclave_trade_1_xur:0 "ดีล Xuran (£exotic_gases£ x1)"
+ enclave_trade_2_xur:0 "ดีล Xuran (£exotic_gases£ x2)"
+ enclave_trade_3_xur:0 "ดีล Xuran (£exotic_gases£ x3)"
+ enclave_trade_4_xur:0 "ดีล Xuran (£exotic_gases£ x4)"
+ enclave_trade_5_xur:0 "ดีล Xuran (£exotic_gases£ x5)"
+ enclave_trade_1_rig:0 "ดีล Riggan (£volatile_motes£ x1)"
+ enclave_trade_2_rig:0 "ดีล Riggan (£volatile_motes£ x2)"
+ enclave_trade_3_rig:0 "ดีล Riggan (£volatile_motes£ x3)"
+ enclave_trade_4_rig:0 "ดีล Riggan (£volatile_motes£ x4)"
+ enclave_trade_5_rig:0 "ดีล Riggan (£volatile_motes£ x5)"
+ enclave_trade_1_mut:0 "ดีล Muutagan (£rare_crystals£ x1)"
+ enclave_trade_2_mut:0 "ดีล Muutagan (£rare_crystals£ x2)"
+ enclave_trade_3_mut:0 "ดีล Muutagan (£rare_crystals£ x3)"
+ enclave_trade_4_mut:0 "ดีล Muutagan (£rare_crystals£ x4)"
+ enclave_trade_5_mut:0 "ดีล Muutagan (£rare_crystals£ x5)"
  edict_nuumismatic_visualization:1 "การแสดงแผนภาพและตัวเลข"
  edict_nuumismatic_visualization_desc:1 "The active use of Numistic visualization techniques will refocus our people's attention from personal gain to cosmic energy production. To achieve something, you must first visualize it."
  edict_terraforming_gas:0 "ก๊าซปรับสภาพดาว"
@@ -2692,9 +2692,9 @@
  decision_negotiate_with_crime_lords_desc:0 "Secretly negotiate a deal with the planet's prominent criminal leaders where they agree to keep their organizations partly in line in exchange for various concessions."
  decision_end_crime_lord_deal:0 "End Deal with Crime Lords"
  decision_end_crime_lord_deal_desc:0 "End our ongoing deal with the leading criminal elements on the planet. This will cause considerable turmoil on the planet for a time."
- decision_end_anticrime_campaign:0 "End Anti-Crime Campaign"
+ decision_end_anticrime_campaign:0 "ยุติการรณรงค์ต่อต้านอาชญากรรม"
  decision_end_anticrime_campaign_desc:0 "Put an end to the ongoing crime prevention campaign."
- anticrime_campaign:0 "Anti-Crime Campaign"
+ anticrime_campaign:0 "รงค์ต่อต้านอาชญากรรม"
  anticrime_campaign_desc:0 "The Enforcers on this world are currently conducting an extensive crime prevention campaign."
  anticrime_campaign_tooltip:4 "การลดอาชญากรรมของผู้คุมกฎ: §G+10§!\nค่าบำรุงรักษาผู้คุมกฎ: §R+2§! £energy£  \n"
  crime_lord_deal:0 "Crime Lord Deal"
@@ -2908,7 +2908,7 @@
  col_habitat_leisure_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อความบันเทิงและวัฒนธรรมในห้วงอวกาศ"
  col_habitat_trade:0 "สถานีการค้า"
  col_habitat_trade_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการค้าในห้วงอวกาศ"
- col_habitat_trade_custom: "§Y$district_hab_housing_plural$§! will replace one £job_clerk£ §Y$job_clerk$§! Job with one £job_trader£ §Y$job_trader$§! Job\n"
+ col_habitat_trade_custom: "§Y$district_hab_housing_plural$§! จะแทนที่อาชีพ £job_clerk£ §Y$job_clerk$§! ด้วยอาชีพ £job_trader£ §Y$job_trader$§! อัตรา 1/1\n"
  col_habitat_fortress:0 "สถานีป้อมปราการ"
  col_habitat_fortress_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อโครงสร้างการป้องกันในห้วงอวกาศ"
  col_habitat_foundry:0 "สถานีโรงหล่อ"
@@ -2925,14 +2925,14 @@
  col_habitat_mining_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการเก็บแร่ในห้วงอวกาศ"
  col_habitat_farming:0 "สถานีปลูกพืชไร้ดิน"
  col_habitat_farming_desc:0 "มหานครที่ถูกสร้างขึ้นในอวกาศเพื่อเพิ่มการเจริญเติบโตของพืช"
- col_habitat_farming_desc_custom: "§Y$district_hab_housing_plural$§! will replace £job_clerk£ §Y$job_clerk$§! Jobs with £job_farmer£ §Y$job_farmer$§! Jobs\n"
+ col_habitat_farming_desc_custom: "§Y$district_hab_housing_plural$§! จะแทนที่งาน £job_clerk£ §Y$job_clerk$§! ด้วยงาน £job_farmer£ §Y$job_farmer$§!\n"
  col_habitat_gestalt_farming:0 "$col_habitat_farming$"
  col_habitat_gestalt_farming_desc:0 "$col_habitat_farming_desc$"
- col_habitat_gestalt_farming_desc_custom: "§Y$district_hab_housing_plural$§! will replace £job_maintenance_drone£ §Y$job_maintenance_drone$§! Jobs with £job_agri_drone£ §Y$job_agri_drone$§! Jobs\n"
+ col_habitat_gestalt_farming_desc_custom: "§Y$district_hab_housing_plural$§! จะแทนที่งาน £job_maintenance_drone£ §Y$job_maintenance_drone$§! ด้วยงาน £job_agri_drone£ §Y$job_agri_drone$§!\n"
  col_habitat_energy:0 "สถานีกำเนิดพลังงาน"
  col_habitat_energy_desc:0 "เป็นเมืองที่ถูกสร้างขึ้นเพื่อการผลิตพลังงานในห้วงอวกาศ"
  col_ring_mix:0 "โลกวงแหวน"
- col_ring_mix_desc:0 "An immense ringworld, its massive area spread between all matters of produce"
+ col_ring_mix_desc:0 "วงแหวนอันกว้างใหญ่ พื้นที่อันกว้างใหญ่แผ่กระจายไปทั่วทุกส่วนของผลิตผล"
  col_default_machine:0 "อาณานิคม"
  col_default_machine_desc:1 "A new colony of our empire, purposely designed for frictionless, everyday efficiency."
  col_crucible:0 "ดาวแห่งเบ้าหลอม"
@@ -2989,7 +2989,7 @@
  NUM_AVAILABLE_ENVOYS:0 "มีทูต: $NUM|Y$"
  matter_decompressor_0:1 "$matter_decompressor_4$ (ขั้นที่0:ที่ตั้ง)"
  matter_decompressor_0_DESC:0 "The construction site station serves as the base for the future construction of a $matter_decompressor_1$."
- matter_decompressor_0_MEGASTRUCTURE_DETAILS:3 "The §Y$matter_decompressor_4$§! lenses a black hole's gravity, forming a drill of gravitational forces to retrieve £minerals£ Minerals from the singularity."
+ matter_decompressor_0_MEGASTRUCTURE_DETAILS:3 "§Y$matter_decompressor_4$§! เลนส์แรงโน้มถ่วงของหลุมดำ ก่อให้เกิดการเจาะแรงโน้มถ่วงเพื่อดึงแร่ £minerals£ จากภาวะเอกฐาน"
  matter_decompressor_1:1 "เครื่องดึงมวลสารจากหลุมดำ: (ขั้นที่1:Anchor)"
  matter_decompressor_1_DESC:1 "An advanced gravity redirection engine holds the facility base on the edge of the black hole's event horizon."
  matter_decompressor_1_MEGASTRUCTURE_DETAILS:0 "$matter_decompressor_0_MEGASTRUCTURE_DETAILS$"
@@ -3013,7 +3013,7 @@
  allow_interstellar_assembly:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดมหึมา:§! $interstellar_assembly_4$"
  strategic_coordination_center_0:1 "$strategic_coordination_center_3$ (ที่ตั้ง)"
  strategic_coordination_center_0_DESC:1 "The construction site station serves as the base for the future construction of a $strategic_coordination_center_3$."
- strategic_coordination_center_0_MEGASTRUCTURE_DETAILS:0 "A facility synchronizing the national Starbase network, augmenting defensive and offensive capabilities."
+ strategic_coordination_center_0_MEGASTRUCTURE_DETAILS:0 "สิ่งอำนวยความสะดวกที่ประสานเครือข่ายฐานอวกาศระดับชาติ เพิ่มขีดความสามารถการป้องกันและการโจมตี"
  strategic_coordination_center_1:1 "ศูนย์ประสานงานยุทธศาสตร์: Hull"
  strategic_coordination_center_1_DESC:1 "The armored hull of the Strategic Coordination Center houses the cream of our military command, who devote their time to strategy and planning in this state-of-the-art facility."
  strategic_coordination_center_1_MEGASTRUCTURE_DETAILS:0 "$strategic_coordination_center_0_MEGASTRUCTURE_DETAILS$"
@@ -3031,7 +3031,7 @@
  strategic_coordination_center_modifier:0 "$strategic_coordination_center_1$"
  mega_art_installation_0:2 "ศูนย์ศิลปะขนาดใหญ่ (ขั้นที่0:ที่ตั้ง)"
  mega_art_installation_0_DESC:0 "The construction site station serves as the base for the future construction of a $mega_art_installation_3$."
- mega_art_installation_0_MEGASTRUCTURE_DETAILS:0 "An artistic beacon on a stellar scale, this installation inspires and represents the spirit of its creators."
+ mega_art_installation_0_MEGASTRUCTURE_DETAILS:0 "ผลงานศิลปะจัดวางนี้สร้างแรงบันดาลใจและเป็นตัวแทนของจิตวิญญาณของผู้สร้างผลงานศิลปะ"
  mega_art_installation_1:0 "ศูนย์ศิลปะ: (ขั้นที่1:ตั้งไข่)"
  mega_art_installation_1_DESC:0 "A bold statement of intent."
  mega_art_installation_2:0 "ศูนย์ศิลปะ: (ขั้นที่2:เจริญเติบโต)"
@@ -3045,7 +3045,7 @@
  mega_art_installation_restored_DESC:0 "$mega_art_installation_3_DESC$"
  interstellar_assembly_0:0 "สมัชชาระหว่างดวงดาว (ขั้นที่0:ที่ตั้ง)"
  interstellar_assembly_0_DESC:0 "The construction site station serves as the base for the future construction of an $interstellar_assembly_4$."
- interstellar_assembly_0_MEGASTRUCTURE_DETAILS:0 "A meeting place for galactic powers, increasing immigration attraction and global opinion of us."
+ interstellar_assembly_0_MEGASTRUCTURE_DETAILS:0 "สถานที่พบปะของมหาอำนาจในกาแล็กซี เพิ่มแรงดึงดูดของการอพยพและเพิ่มทัศนคติจากทั่วกาแล็กซีต่อเรา"
  interstellar_assembly_1:0 "สมัชชาระหว่างดวงดาว: (ขั้นที่1:สถานที่)"
  interstellar_assembly_1_DESC:0 "A humbling reminder that we are all part of a greater community."
  interstellar_assembly_2:0 "สมัชชาระหว่างดวงดาว: (ขั้นที่2:แหวนกงสุล)"
@@ -3365,7 +3365,7 @@
  fleet2product2_tooltip:1 "§G2§! £pop£ ประชากร $NAME_Caravaneer_Fleet2_species_plural$ มาที่ [Root.Capital.GetName]"
  fleet2product3_tooltip:1 "ประกาศคำสั่ง §Yการแสดงแผนภาพและตัวเลข§! §G+1§!"
  fleet2product4_tooltip:1 "§G+1§! §YNumistic Data Modeling§! Technology"
- fleet2product5_tooltip:1 "A §GSkill 3§! governor, blessed by the goddess of fortune, joins the [Root.GetName]."
+ fleet2product5_tooltip:1 "ผู้ว่าการ §Gสกิล 3§! ที่ได้รับพรจากเทพีแห่งโชคลาภ เข้าร่วม [Root.GetName]"
  fleet2product6_tooltip:2 "You are granted £rare_crystals£ §G200§! §Y$rare_crystals$§! in exchange for £pop£ §R1§! pop"
  fleet2product7_tooltip:0 "§G+1§! §Y$caravaneer_cruiser_01$§!"
  fleetproduct10_tooltip:0 "§G+1§! การตัดสินใจ §Yใช้อัลกอริทึมศักดิ์สิทธิ์§!"
@@ -3397,7 +3397,7 @@
  fleet3hewwo8:0 "Look at your credit silos, [Root.GetSpeciesName]. Full to bursting! Please, let us lighten them. Let us assist."
  cara_fleet3_deals.title:0 "$cara_fleet3_contact.title$"
  fleet3dealdesc1:0 "We have ore. Rich, luminous ore. Torn right from the stone! Sparkling minerals for the [Root.GetName].\n\nBut we hunger. We thirst! Grant us [Root.GetFleet3ScaledCostDeal1], and we shall supply your builders, your makers with [Root.GetFleet3ScaledProductDeal1]."
- fleet3dealdesc2:0 "We have a leader, an excellent fit for the [Root.GetName]! [Root.GetFleet3ProductDeal2]\n\nGive us [Root.GetFleet3CostDeal2], and the leader is yours!"
+ fleet3dealdesc2:0 "We have a leader, an excellent fit for the [Root.GetName]! [Root.GetFleet3ProductDeal2]\n\nมอบ [Root.GetFleet3CostDeal2] ให้เรา แล้วผู้นำคนนี้ ก็จะเป็นของคุณ!"
  fleet3dealdesc3:1 "เรามีคนงานที่ดีสำหรับคุณ คนยกของที่ดี, คนลากของ, คนดึงของ, คนทำความสะอาด! สุขภาพดี ฉลาด ให้เรา £alloys£ §R2000§! $alloys$ และเราจะส่ง §G3§! £pop£ ประชากร $NAME_Caravaneer_Fleet3_species$ มายังดาวเคราะห์ดวงใดดวงหนึ่งของคุณ\n\nอะไร? ประวัติอาชญากรรม? กลัวเราทำเอกสารหาย §Hkssk!§!"
  fleet3dealdesc3machi:2 "เรามีคนงานที่ดีสำหรับคุณ คนยกของที่ดี, คนลากของ, คนดึงของ, คนทำความสะอาด! สุขภาพดี ฉลาด ให้เรา £alloys£ §R2000§! $alloys$ และเราจะส่ง §G3§! £pop£ ประชากร $NAME_Caravaneer_Fleet3_robot$ มายังดาวเคราะห์ดวงใดดวงหนึ่งของคุณ\n\nอะไร? ประวัติอาชญากรรม? กลัวเราทำเอกสารหาย §Hkssk!§!"
  fleet3dealdesc4:0 "Look. [Root.GetFleet3ProductDeal4] [Root.GetFleet3CostDeal4]"
@@ -3427,8 +3427,8 @@
  fleet3deal4product1:0 "This alloy. The weight. The lustre. The glow! Have you ever seen such metallic bonding? Incredible yield strength. Maximum grade. Nominal impurities. We can feel it. It calls to you.\n\nWe will give to you £alloys£ §G2000§! §Y$alloys$§!,"
  fleet3deal4product2:0 "These exotic gases. Effervescent. Compressed to maximum density, for logistical convenience. Highly volatile - careful! You desire them, do you not? For your shields, your plasma cannons? They can be yours.\n\nWe will give you £exotic_gases£§G150§! §Y$exotic_gases$§!,"
  fleet3deal4product3:0 "This metal. It moves. It flows. It reconstructs, §Hkssk!§! We have found many uses for it. We are certain you shall, too.\n\nเราจะให้คุณ £sr_living_metal£  §G40§! §Y$sr_living_metal$§!,"
- fleet3deal2product1_tooltip:0 "A §GSkill 3§! §HScientist§! joins the [Root.GetName]"
- fleet3deal2product2_tooltip:0 "A §GSkill 3§! §HGovernor§! joins the [Root.GetName]"
+ fleet3deal2product1_tooltip:0 "§Hนักวิทยาศาสตร์§! §Gสกิล 3§! เข้าร่วม [Root.GetName]"
+ fleet3deal2product2_tooltip:0 "§Hผู้ว่าการ§! §Gสกิล 3§! เข้าร่วม [Root.GetName]"
  fleet3deal5cost_tooltip:1 "§R-3§! §H$pop_cat_worker$§! £pop£ Pops"
  fleet3deal5cost_gesta_tooltip:1 "§R-3§! §H$pop_cat_simple_drone$§! £pop£ Pops"
  fleet3deal5product_tooltip:0 "Unlocks §Y$building_waste_reprocessing_center$§!\n Produces: £energy£ 10 £minerals£ 10\n $mod_job_technician_drone_add$: §G+2§!\n£mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!: §G+5§!"
@@ -4221,7 +4221,7 @@
  subject_tax:0 "ภาษีของบริวาร"
  MONTHLY_TRADE_PER_UNIT:0 "ต่อหน่วย"
  alert_cannot_afford_monthly_trade_title:1 "ราคาซื้อขายรายเดือนสูง/ต่ำเกินไป"
- alert_cannot_afford_monthly_trade_instant:1 "At least one of our Monthly Trades has a price that doesn't match the min/max price that we allow. Consider updating the price."
+ alert_cannot_afford_monthly_trade_instant:1 "การซื้อขายรายเดือนของเราอย่างน้อยหนึ่งรายการมีราคาที่ไม่ตรงกับราคาต่ำสุด/สูงสุดที่เราอนุญาต พิจารณาอัปเดตราคา"
  alert_cannot_afford_monthly_trade_delayed:0 "§Gคลิกเพื่อเปิดหน้าต่างตลาด§!"
  riggan_deal_in_place:0 "We already have a §YRiggan Deal§!."
  xuracorp_deal_in_place:0 "We already have a §YXuran Deal§!."
