--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -200,14 +200,14 @@
  ACTION_DECLARE_WAR_NOTIFICATION:3 "§H[From.GetName]§! ประกาศสงครามกับ §H[Root.GetName]§!!\n\nตอนนี้เราจะมาดูกันว่าจักรวรรดิใดจะแข็งแกร่งกว่ากัน"
  ACTION_OFFER_PEACE_NOTIFICATION:1 "§H[From.GetName]§! ทำข้อตกลงสงบศึกกับ §H[Root.GetName]§!"
  ACTION_INVITE_TO_ALLIANCE_NOTIFICATION:2 "§H[Root.GetName]§! เข้าร่วมกับ §H[From.GetAllianceName]§!\n\nตอนนี้พวกเขาจะยืนหยัดเป็นหนึ่งเดียวเพื่อจัดการศัตรูของพวกเขา"
- ACTION_LEAVE_ALLIANCE_NOTIFICATION:2 "§H[From.GetName]§! left the §H[From.GetAllianceName]§!.\n\nThis may represent opportunity for us..."
+ ACTION_LEAVE_ALLIANCE_NOTIFICATION:2 "§H[From.GetName]§! ออกจาก §H[From.GetAllianceName]§!\n\nนี่อาจเป็นโอกาสสำหรับเรา..."
  ACTION_DEMAND_SUBJUGATION_NOTIFICATION:3 "§H[From.GetName]§! ปราบ §H[Root.GetName]§!\n\nพวกเขาสละอิสรภาพเพื่อแลกกับความปลอดภัย"
  ACTION_ASK_TO_BECOME_SUBJUGATED_NOTIFICATION:3 "§H[Root.GetName]§! ปราบ §H[From.GetName]§!\n\nพวกเขาสละอิสรภาพเพื่อแลกกับความปลอดภัย"
  ACTION_FORM_FEDERATION_NOTIFICATION:2 "§H[From.GetAllianceName]§! โหวตให้ตั้ง $FEDERATION$\n\nพวกเขาได้เลือกที่จะอยู่ในกาแล็กซีด้วยกันเป็นหนึ่งเดียวกัน"
  ACTION_INVITE_TO_FEDERATION_NOTIFICATION:2 "§H[Root.GetName]§! เข้าร่วมกับ §H[From.GetAllianceName]§!\n\nตอนนี้พวกเขาจะยืนหยัดเป็นหนึ่งเดียวเพื่อจัดการศัตรูของพวกเขา"
  ACTION_ASK_TO_JOIN_FEDERATION_NOTIFICATION:2 "§H[From.GetName]§! เข้าร่วมกับ §H[Root.GetAllianceName]§!\n\nตอนนี้พวกเขาจะยืนหยัดเป็นหนึ่งเดียวเพื่อจัดการศัตรูของพวกเขา"
  ACTION_ASK_TO_LEAVE_FEDERATION_NOTIFICATION:0 "$ACTION_LEAVE_FEDERATION_NOTIFICATION$"
- ACTION_LEAVE_FEDERATION_NOTIFICATION:2 "§H[From.GetName]§! left the §H[Root.GetAllianceName]§!.\n\nThis may represent opportunity for us..."
+ ACTION_LEAVE_FEDERATION_NOTIFICATION:2 "§H[From.GetName]§! ออกจาก §H[Root.GetAllianceName]§!\n\nนี่อาจเป็นโอกาสสำหรับเรา..."
  ACTION_KICK_FROM_FEDERATION_NOTIFICATION:1 "§H[From.GetAllianceName]§! โหวตให้ขับ §H[Root.GetName]§! ออกจากสหพันธ์"
  ACTION_ASK_TO_BE_RELEASED_SUBJECT_NOTIFICATION:2 "§H[Root.GetName]§! gave independence to §H[From.GetName]§!.\n\nIt seems they were too weak to maintain control of their subject."
  ACTION_RELEASE_SUBJECT_NOTIFICATION:2 "§H[From.GetName]§! gave independence to §H[Root.GetName]§!.\n\nIt seems they were too weak to maintain control of their subject."
@@ -228,7 +228,7 @@
  ACTION_BREAK_MIGRATION_PACT_NOTIFICATION:1 "§H[From.GetName]§! ยกเลิกสนธิสัญญาการย้ายถิ่นฐานที่ทำกับ §H[Root.GetName]§!\n\nดูเหมือนว่าพวกเขาจะเสียดายกับการเปิดเขตแดนต่อกัน"
  ACTION_GUARANTEE_INDEPENDENCE_NOTIFICATION:1 "§H[From.GetName]§! ตอนนี้จะรับประกันความเป็นอิสระของ §H[Root.GetName]§!\n\nตอนนี้พวกเขาจะปกป้องอีกฝ่ายจากการโจมตีทั้งหมด"
  ACTION_BREAK_GUARANTEE_NOTIFICATION:1 "§H[From.GetName]§! หยุดรับประรองความเป็นอิสระของ §H[Root.GetName]§!\n\nนี่อาจเป็นโอกาสสำหรับเรา..."
- ACTION_SUPPORT_INDEPENDENCE_NOTIFICATION:1 "§H[From.GetName]§! will now support the independence of §H[Root.GetName]§!.\n\nTheir overlord must be none too pleased..."
+ ACTION_SUPPORT_INDEPENDENCE_NOTIFICATION:1 "§H[From.GetName]§! จะสนับสนุนความเป็นอิสระของ §H[Root.GetName]§!\n\nเจ้าเหนือหัวของพวกเขาคงไม่พอใจ..."
  ACTION_BREAK_SUPPORT_NOTIFICATION:1 "§H[From.GetName]§! stopped supporting the independence of §H[Root.GetName]§!.\n\nIt seems [Root.GetName] is destined to remain a subject."
  ACTION_OPEN_BORDERS_NOTIFICATION:1 "§H[From.GetName]§! opened their borders to the fleets of §H[Root.GetName]§!.\n\nThis will improve their diplomatic relations."
  ACTION_CLOSE_BORDERS_NOTIFICATION:1 "§H[From.GetName]§! closed their borders to the fleets of §H[Root.GetName]§!.\n\nThis will worsen their diplomatic relations."
@@ -402,8 +402,8 @@
  MESSAGE_EXPIRED_EDICT_TITLE:0 "ประกาศคำสั่งหมดอายุ"
  COUNTRY_EDICT_EXPIRED:0 "The $EDICT|Y$ Edict affecting our empire has expired."
  PLANET_EDICT_EXPIRED:0 "The $EDICT|Y$ Edict affecting $PLANET$ has expired."
- MESSAGE_MEGASTRUCTURE_BUILT_TITLE:0 "Megastructure Built"
- MESSAGE_MEGASTRUCTURE_BUILT:4 "Completed construction of the $MEGASTRUCTURE|H$ in the $SYSTEM|Y$ system."
+ MESSAGE_MEGASTRUCTURE_BUILT_TITLE:0 "สิ่งก่อสร้างขนาดมหึมาแล้วเสร็จ"
+ MESSAGE_MEGASTRUCTURE_BUILT:4 "ก่อสร้าง $MEGASTRUCTURE|H$ แล้วเสร็จ ในระบบดาว $SYSTEM|Y$"
  MESSAGE_MEGASTRUCTURE_UPGRADED_TITLE:0 "Megastructure Upgraded"
  MESSAGE_MEGASTRUCTURE_UPGRADED:3 "Completed upgrading the $MEGASTRUCTURE|H$ in the $SYSTEM|Y$ system."
  MESSAGE_ALIEN_MEGASTRUCTURE_BUILT_TITLE:0 "เอเลี่ยนสร้างสิ่งก่อสร้างขนาดมหึมา"
