--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -106,9 +106,9 @@
  MOD_COUNTRY_DISTANT_CLAIM_INFLUENCE_COST_MULT:0 "ค่าอิทธิพลที่ใช้ในการอ้างสิทธิ์ระยะไกล"
  MOD_COUNTRY_SUBJECT_INTEGRATION_SPEED_ADD:0 "ความเร็วในการรวมเข้ากับบริวาร"
  MOD_COUNTRY_INTEGRATION_COOLDOWN_MULT:0 "เวลาคูลดาวน์ในการรวมเข้ากับบริวาร"
- MOD_COUNTRY_VASSAL_NAVAL_CAPACITY_CONTRIBUTION_MULT:0 "Vassal Naval Capacity Contribution"
- MOD_COUNTRY_NAVAL_CAPACITY_CONTRIBUTION_FROM_SUBJECTS_MULT:0 "Subject Naval Capacity Contribution"
- MOD_COUNTRY_NAVAL_CAPACITY_CONTRIBUTION_TO_OVERLORD_MULT:0 "Naval Capacity Contribution to Overlord"
+ MOD_COUNTRY_VASSAL_NAVAL_CAPACITY_CONTRIBUTION_MULT:0 "การสนับสนุนความจุของยานรบจากจักรวรรดิบริวาร"
+ MOD_COUNTRY_NAVAL_CAPACITY_CONTRIBUTION_FROM_SUBJECTS_MULT:0 "การสนับสนุนความจุของยานรบจากจักรวรรดิเมืองขึ้น"
+ MOD_COUNTRY_NAVAL_CAPACITY_CONTRIBUTION_TO_OVERLORD_MULT:0 "มอบความจุของยานรบให้กับเจ้าเหนือหัว"
  MOD_COUNTRY_SUBJECT_TRIBUTE_MULT:0 "ภาษีของบริวาร"
  MOD_COUNTRY_SUBJECT_TECHNOLOGY_SHARING_MULT:0 "การแบ่งปันเทคโนโลยี"
  MOD_COUNTRY_EXPANSION_DISTANCE_MULT:0 "ระยะทางการขยายเขตแดน"
@@ -320,7 +320,7 @@
  MOD_SHIP_STARTING_EXPERIENCE_ADD:0 "ค่าประสบการณ์ยานเริ่มต้น"
  MOD_SHIP_EXPERIENCE_GAIN_MULT:0 "ได้ค่าประสบการณ์ยาน"
  MOD_SHIP_JUMPDRIVE_COOLDOWN_MULT:0 "เวลาคูลดาวน์การขับเคลื่อนแบบจั้มไดร์ฟ"
- MOD_SHIP_NAVAL_CAP_USAGE_ADD:0 "Naval Cap Usage"
+ MOD_SHIP_NAVAL_CAP_USAGE_ADD:0 "ใช้ความจุของยานรบ"
  MOD_SHIP_NAVAL_CAP_USAGE_MULT:0 "$MOD_SHIP_NAVAL_CAP_USAGE_ADD$"
  MOD_SHIP_REPAIR_HULL_MULT:0 "ความเร็วในการซ่อมตัวยานที่จอดเทียบท่า"
  MOD_SHIP_REPAIR_ARMOR_MULT:0 "ความเร็วในการซ่อมเกราะของยานที่จอดเทียบท่า"
@@ -482,7 +482,7 @@
  mod_terraforming_ocean_cost_mult:0 "ค่าปรับสภาพดาวเป็นมหาสมุทร"
  MOD_SHIP_EMERGENCY_FTL_MIN_DAYS_ADD:1 "เวลาคูลดาวน์ในการจั้มฉุกเฉิน FTL"
  MOD_SHIP_EMERGENCY_FTL_MIN_DAYS_MULT:0 "$MOD_SHIP_EMERGENCY_FTL_MIN_DAYS_ADD$"
- MOD_COUNTRY_FEDERATION_NAVAL_CAP_CONTRIBUTION_MULT:0 "การสนับสนุนความจุยานรบของกองยานสหพันธ์"
+ MOD_COUNTRY_FEDERATION_NAVAL_CAP_CONTRIBUTION_MULT:0 "การสนับสนุนความจุยานรบของสหพันธ์"
  MOD_COMMAND_LIMIT_ADD:0 "ขีดจำกัดคำสั่งของกองยาน"
  MOD_COMMAND_LIMIT_MULT:0 "ขีดจำกัดคำสั่งของกองยาน"
  MOD_COUNTRY_NAVAL_COVERAGE_ADD:0 "$navy_coverage$"
@@ -823,7 +823,7 @@
  cybrex_uninhabitable_category_research_speed_add:0 "$cybrex_uninhabitable_category_research_speed_mult$"
  cybrex_habitable_category_research_speed_add:0 "$cybrex_habitable_category_research_speed_mult$"
  mod_category_materials_research_speed_mult:1 "ความเร็วในการวิจัย (§Yวัสดุ§!)"
- mod_category_propulsion_research_speed_mult:1 "ความเร็วในการวิจัย (§Yระบบขับเคลื่อน§!)"
+ mod_category_propulsion_research_speed_mult:1 "ความเร็วในการวิจัย (§Yระบบขับดัน§!)"
  mod_category_voidcraft_research_speed_mult:1 "ความเร็วในการวิจัย (§Yยานอวกาศ§!)"
  mod_category_robotics_research_speed_mult:1 "ความเร็วในการวิจัย (§Yหุ่นยนต์§!)"
  mod_category_industry_research_speed_mult:1 "ความเร็วในการวิจัย (§Yอุตสาหกรรม§!)"
