--- a/mod/thmod/localisation/english/name_lists/common_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/common_names_l_english.yml
@@ -19,10 +19,10 @@
  NAME_Ring_Section_K:0 "Ring Section K"
  NAME_Ring_Section_L:0 "Ring Section L"
  NAME_Ring_Section:0 "Ring Section"
- NAME_Habitable_Section_A:0 "Habitable Section A"
- NAME_Habitable_Section_B:0 "Habitable Section B"
- NAME_Habitable_Section_C:0 "Habitable Section C"
- NAME_Habitable_Section_D:0 "Habitable Section D"
+ NAME_Habitable_Section_A:0 "เซ็กชันที่อยู่อาศัย A"
+ NAME_Habitable_Section_B:0 "เซ็กชันที่อยู่อาศัย B"
+ NAME_Habitable_Section_C:0 "เซ็กชันที่อยู่อาศัย C"
+ NAME_Habitable_Section_D:0 "เซ็กชันที่อยู่อาศัย D"
  NAME_Galactic_Doorstep:0 "The Black Crown"
  NAME_Gateway_Vermin:0 "Gateway Vermin"
  NAME_Theros:0 "Theros"
