--- a/mod/thmod/localisation/english/name_lists/event_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/event_names_l_english.yml
@@ -17,7 +17,7 @@
  NAME_mardak_vol_haters:0 "Vol"
  NAME_Mutant_Horrors:0 "Mutant Horrors"
  NAME_Prikkiki_Ti:0 "Prikkiki-Ti"
- NAME_Psionic_Avatar_Country:0 "Psionic Avatar"
+ NAME_Psionic_Avatar_Country:0 "อวตารพลังจิต"
  NAME_Ransomeers:0 "Ransomeers"
  NAME_Rising_Manifold:0 "Rising Manifold"
  NAME_Shattered_Frontier:0 "Shattered Frontier"
@@ -71,7 +71,7 @@
  NAME_New_Ship_plural:0 "New Ships"
  NAME_Occupation_Flotilla:0 "Occupation Flotilla"
  NAME_Other_Science_Ship:0 "Other Science Ship"
- NAME_Psionic_Avatar:0 "Psionic Avatar"
+ NAME_Psionic_Avatar:0 "อวตารพลังจิต"
  NAME_Ransomeer_Base:0 "Ransomeer Base"
  NAME_Salvage_Fleet:0 "Salvage Fleet"
  NAME_Scrap_Probes:0 "Scrap Probes"
@@ -433,7 +433,7 @@
  NAME_Heathens_Doom:0 "Heathen's Doom"
  NAME_Heavenly_Judgment:0 "Heavenly Judgment"
  NAME_Heavenly_Portent:0 "Heavenly Portent"
- NAME_Holy_Avatar:0 "Holy Avatar"
+ NAME_Holy_Avatar:0 "อวตารศักดิ์สิทธิ์"
  NAME_Holy_Defender:0 "Holy Defender"
  NAME_Holy_Protector:0 "Holy Protector"
  NAME_Infidel_Slayer:0 "Infidel Slayer"
