--- a/mod/thmod/localisation/english/name_lists/initializers_names_l_english.yml
+++ b/mod/thmod/localisation/english/name_lists/initializers_names_l_english.yml
@@ -164,7 +164,7 @@
  NAME_Adjuster:0 "Adjuster"
  NAME_Alpha:0 "Alpha"
  NAME_Archivist:0 "Archivist"
- NAME_Avatar:0 "Avatar"
+ NAME_Avatar:0 "อวตาร"
  NAME_Benevolence:0 "Benevolence"
  NAME_Beta:0 "Beta"
  NAME_Cleanser:0 "Cleanser"
@@ -250,8 +250,8 @@
  NAME_Yormak's_Tongue:0 "Yormak's Tongue"
  NAME_Yormak's_Tusk:0 "Yormak's Tusk"
  NAME_Placid_Leviathans:0 "Placid Leviathans"
- NAME_Tiyanki_Space_Whale:0 "Tiyanki Space Whale"
- NAME_Tiyanki_Space_Whale_seed: "Tiyanki Space Whale (£seed_pod£)"
+ NAME_Tiyanki_Space_Whale:0 "วาฬอวกาศ Tiyanki"
+ NAME_Tiyanki_Space_Whale_seed: "วาฬอวกาศ Tiyanki (£seed_pod£)"
  NAME_Tiyanki_Bull:0 "Tiyanki Bull"
  NAME_Tiyanki_Cow:0 "Tiyanki Cow"
  NAME_Tiyanki_Hatchling:0 "Tiyanki Hatchling"
