--- a/mod/thmod/localisation/english/nemesis_content_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_content_l_english.yml
@@ -756,7 +756,7 @@
  resolution_category_custodian_reforms:0 "Custodian Reforms"
  resolution_category_galactic_institutions:0 "Galactic Institutions"
  resolution_category_term_limits:0 "Term Limits"
- resolution_galacticreforms_nominate_custodian:0 "เสนอชื่อผู้พิทักษ์"
+ resolution_galacticreforms_nominate_custodian:0 "เสนอชื่อผู้พิทักษ์กาแล็กติก"
  resolution_galacticreforms_nominate_custodian_desc:0 "When decisive action is needed, a member of the Council can be elevated to the position of Galactic Custodian. The Custodian is granted special powers and can propose new and powerful resolutions."
  nominate_custodian_requires_independence:0 "£trigger_no£ We must be fully independent to serve as Custodians."
  nominate_custodian_not_crisis:0 "£trigger_no£ The scrutiny of a Custodianship would expose our plans for the galaxy..."
@@ -817,13 +817,13 @@
  resolution_emperor_itc:1 "Imperial Trade Company"
  resolution_emperor_itc_desc:0 "The ITC will operate under an Imperial Charter and its management and board of directors shall be under the direct control of the Galactic Emperor."
  resolution_category_imperial_council:0 "สภาจักรวรรดิ"
- resolution_emperor_trial_of_advancement:0 "By Trial of Advancement"
+ resolution_emperor_trial_of_advancement:0 "โดยการทดสอบความก้าวหน้า"
  resolution_emperor_trial_of_advancement_desc:1 "Lest they are taken for granted, it should be possible to challenge the members of the Imperial Council for their seats in a Trial of Advancement. The complacent and the meek must be weeded out from the upper echelons of the Imperium."
  resolution_emperor_trial_of_advancement_tooltip:0 "Grants the §Y'Trial of Advancement'§! casus belli on members of the Imperial Council."
- resolution_emperor_by_appointment:0 "By Appointment"
+ resolution_emperor_by_appointment:0 "โดยการแต่งตั้ง"
  resolution_emperor_by_appointment_desc:1 "The members of the Imperial Council must serve at the pleasure of Their Imperial Majesty, who should be free to pick from amongst all of the Imperium's loyal subjects."
  resolution_emperor_by_appointment_tooltip:1 "The ruler of the Imperium is free to appoint whomever they want to the Imperial Council."
- resolution_emperor_by_election:0 "By Election"
+ resolution_emperor_by_election:0 "โดยการเลือกตั้ง"
  resolution_emperor_by_election_desc:0 "As in the old Galactic Community, the members of the Imperial Council should be elected based on their voting power."
  resolution_emperor_by_election_tooltip:0 "Membership in the Imperial Council is determined through regular elections based on §YDiplomatic Weight§!."
  resolution_emperor_ina:0 "Imperial Navigation Agency"
@@ -834,7 +834,7 @@
  resolution_emperor_gto_desc:0 "$resolution_custodian_gto_desc$"
  resolution_emperor_disband_gto:0 "$resolution_custodian_disband_gto$"
  resolution_emperor_disband_gto_desc:0 "$resolution_custodian_disband_gto_desc$"
- galactic_empire:1 "Galactic Imperium"
+ galactic_empire:1 "จักรวรรดิกาแล็กติกอิมพีเรียม"
  custodianship:0 "Custodianship"
  requires_recipient_not_in_galactic_empire:0 "$TRIGGER_FAIL$ §RMembers of the §!§YGalactic Imperium§!§R cannot be subjects of non-members.§!"
  requires_not_in_galactic_empire:0 "$TRIGGER_FAIL$§R We cannot submit to them if one of us is a member of the §!§YGalactic Imperium§!§R while the other is not.§!"
@@ -845,16 +845,16 @@
  cannot_use_against_custodian:0 "£trigger_no£  We cannot use this War Goal against the Galactic Custodian."
  cannot_use_against_emperor:0 "£trigger_no£  We cannot use this War Goal against the ruler of the Galactic Imperium."
  cannot_use_against_btc:0 "£trigger_no£  We cannot use this War Goal against an empire that has become the Crisis."
- 1st_empire:1 "First Galactic Imperium"
- 2nd_empire:1 "Second Galactic Imperium"
- 3rd_empire:1 "Third Galactic Imperium"
- 4th_empire:1 "Fourth Galactic Imperium"
- 5th_empire:1 "Fifth Galactic Imperium"
- 6th_empire:1 "Sixth Galactic Imperium"
- 7th_empire:1 "Seventh Galactic Imperium"
- 8th_empire:1 "Eighth Galactic Imperium"
- 9th_empire:1 "Ninth Galactic Imperium"
- 10th_empire:1 "Tenth Galactic Imperium"
+ 1st_empire:1 "จักรวรรดิกาแล็กติกอิมพีเรียม ที่ 1"
+ 2nd_empire:1 "จักรวรรดิกาแล็กติกอิมพีเรียม ที่ 2"
+ 3rd_empire:1 "จักรวรรดิกาแล็กติกอิมพีเรียม ที่ 3"
+ 4th_empire:1 "จักรวรรดิกาแล็กติกอิมพีเรียม ที่ 4"
+ 5th_empire:1 "จักรวรรดิกาแล็กติกอิมพีเรียม ที่ 5"
+ 6th_empire:1 "จักรวรรดิกาแล็กติกอิมพีเรียม ที่ 6"
+ 7th_empire:1 "จักรวรรดิกาแล็กติกอิมพีเรียม ที่ 7"
+ 8th_empire:1 "จักรวรรดิกาแล็กติกอิมพีเรียม ที่ 8"
+ 9th_empire:1 "จักรวรรดิกาแล็กติกอิมพีเรียม ที่ 9"
+ 10th_empire:1 "จักรวรรดิกาแล็กติกอิมพีเรียม ที่ 10"
  11th_empire:1 "Last Galactic Imperium"
  12th_empire:1 "Final Galactic Imperium"
  13th_empire:1 "Ultimate Galactic Imperium"
@@ -866,7 +866,7 @@
  succession_type_none_desc:0 "There is no succession in this federation."
  succession_term_perpetual:0 "Perpetual"
  succession_term_perpetual_desc:0 "The Presidency in this federation is perpetual and does not change."
- centralization_imperial_loyalists:1 "Galactic Imperium"
+ centralization_imperial_loyalists:1 "จักรวรรดิกาแล็กติกอิมพีเรียม"
  centralization_imperial_loyalists_desc:1 "This federation is organized under the Galactic Imperium."
  treaties_separate_no_imperial_loyalists:0 "$treaties_separate_no$"
  treaties_separate_no_imperial_loyalists_desc:0 "$treaties_separate_no_desc$"
@@ -903,7 +903,7 @@
  custodian.17.a:0 "This is an outrage!"
  custodian.17.b:0 "That is the end of that."
  resolution_galacticreforms_unseat_custodian_tooltip:0 "The current §YGalactic Custodians§! are removed from office."
- resolution_galacticreforms_unseat_custodian:0 "Unseat Custodian"
+ resolution_galacticreforms_unseat_custodian:0 "ถอดถอนจากตำแหน่งผู้พิทักษ์"
  resolution_galacticreforms_unseat_custodian_desc:0 "It is time to put an end to the corruption of the current Custodians. They must immediately be removed from office before they can do more harm to the Galactic Community!"
  emperor.2.name:0 "The [Root.GetGalEmpireName]"
  emperor.2.normal.desc:0 "$emperor.2.intro.desc$\n\n$emperor.2.a.desc$\n\n$emperor.2.outro.desc$"
@@ -1002,10 +1002,10 @@
  casus_belli_cb_trial_of_advancement:0 "Trial of Advancement"
  war_goal_wg_seize_council_seat:1 "ตำแหน่งในสภา"
  war_goal_wg_seize_council_seat_desc:0 "สงครามเพื่อยึดที่นั่งของศัตรูในสภาอิมพีเรียล"
- resolution_emperor_abolish_council:0 "§RAbolish Imperial Council§!"
+ resolution_emperor_abolish_council:0 "§Rยกเลิกสภาอิมพีเรียล§!"
  resolution_emperor_abolish_council_desc:0 "The Imperial Council and its sycophants are yet another tragic remnant of the corrupt Galactic Community. It serves no purpose in this new galactic era."
  resolution_emperor_abolish_council_tooltip:0 "The Imperial Council ceases to exist."
- resolution_emperor_restore_council:0 "Restore Imperial Council"
+ resolution_emperor_restore_council:0 "ฟื้นฟูสภาอิมพีเรียล"
  resolution_emperor_restore_council_desc:1 "Perhaps the decision to dismiss the Imperial Council was... taken in haste. Some delegation is necessary in an institution the size of the Galactic Imperium."
  resolution_emperor_restore_council_tooltip:0 "The §YImperial Council§! is restored with three members."
  resolution_emperor_council_size_1:0 "$resolution_galacticreforms_council_size_1$"
