--- a/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_espionage_l_english.yml
@@ -32,8 +32,8 @@
  ESPIONAGE_OPERATION_PROGRESS_TOOLTIP_NEXT_PHASE:0 "Next phase ends in £time£ $DAYS|Y$"
  ESPIONAGE_OPERATION_PROGRESS_TOOLTIP_PHASE_NUMBER:1 "$PHASES|Y$ of $PHASES_TOTAL|Y$ stages have been completed."
  ESPIONAGE_FROM_TARGET_EMPIRE_SIZE_VALUE:1 "ขนาดจักรวรรดิของเป้าหมาย: $VALUE|=G$"
- ESPIONAGE_FROM_THEIR_ENCRYPTION_DECRYPTION_VALUE:1 "Relative Encryption: $VALUE|+=%$"
- ESPIONAGE_FROM_OUR_ENCRYPTION_DECRYPTION_VALUE:0 "Relative Encryption: $VALUE|+=$"
+ ESPIONAGE_FROM_THEIR_ENCRYPTION_DECRYPTION_VALUE:1 "การเข้ารหัสของฝ่ายตรงข้าม: $VALUE|+=%$"
+ ESPIONAGE_FROM_OUR_ENCRYPTION_DECRYPTION_VALUE:0 "การเข้ารหัสของฝ่ายตรงข้าม: $VALUE|+=$"
  ESPIONAGE_DAILY_NETWORK:0 "ความคืบหน้าการแทรกซึม"
  ESPIONAGE_DAILY_NETWORK_VALUE:1 "ความคืบหน้ารายวัน: $VALUE|+=$"
  ESPIONAGE_DAILY_NETWORK_VALUE_DELAYED:1 "§EOur §YInfiltration Level§! of this Empire is changing each day by this amount.\n\nSpy Networks can only grow if they have an §YEnvoy§! assigned to act as a Spymaster.\n\nCountries with high §Y$EMPIRE_SIZE$§! or where we have a §YRelative Encryption§! advantage are easier to infiltrate.§!"
@@ -82,7 +82,7 @@
  RELATIVE_ENCRYPTION_DEFENSIVE:1 "การถอดรหัสของพวกเขาคือ $REL$ เทียบกับการเข้ารหัสของเรา เมื่อดำเนินการจารกรรมเรา พวกเขาจะได้รับผลดังนี้:"
  RELATIVE_ENCRYPTION_OFFENSIVE:1 "การเข้ารหัสของพวกเขาคือ $REL$ เทียบกับการถอดรหัสของเรา เมื่อดำเนินการจารกรรมพวกเขา เราจะได้รับผลดังนี้:"
  SPY_NETWORK_NO_ENVOY_ASSIGNED:1 "§R- ต้องการ §Yทูต§! เพื่อกำหนดให้กับเครือข่ายสายลับ§!"
- SPY_NETWORK_ENVOY_ALREADY_ASSIGNED:0 "$TRIGGER_FAIL$ §RThis $spy_network$ already has a $role_spymaster$ assigned. See the Espionage tab for $spy_network$ information.§!"
+ SPY_NETWORK_ENVOY_ALREADY_ASSIGNED:0 "$TRIGGER_FAIL$ §R$spy_network$นี้มี $role_spymaster$ ที่ถูกกำหนดอยู่แล้ว ดูแท็บการจารกรรมสำหรับข้อมูล $spy_network$§!"
  ESPIONAGE_OPERATION_CHANCE_CATEGORY_ASSET:0 "Success is more likely if we have an §YAsset§! assigned to this Operation, sharing the same §Yprimary category§!."
  ESPIONAGE_OPERATION_CHANCE_THEMED_ASSET:0 "Success is more likely if we have an §YAsset§! assigned to this Operation, sharing the same §Ysecondary category§!."
  ESPIONAGE_OPERATION_ASSET_EVENT_OPTION:0 "The §YAsset§! we have assigned to this Operation enables us to take this course of action."
@@ -224,10 +224,10 @@
  mod_op_cat_technology_skill_add:1 "สกิลปฏิบัติการ ($op_cat_technology$)"
  mod_op_cat_military_skill_add:1 "สกิลปฏิบัติการ ($op_cat_military$)"
  espionage_operation_roll_header:2 "§H$ARCHAEOLOGICAL_SITE_BREAKTHROUGH$§!\nThis reflects the chance of your operatives making a breakthrough during the current stage of their Operation.\n\nEvery time a phase ends, a die (§Y1§! to §Y10§!) is rolled. The result of the roll is added to §YSkill Bonus§! and §YInsights§!, then subtracted by §YDifficulty§!."
- espionage_operation_roll_extended_header:0 "$espionage_operation_roll_header$\n\n§ERoll Outcomes:§!"
- ESPIONAGE_OPERATION_ON_ROLL_FAILED_RANGE:1 "($CHANCE|%0Y$) ผลลัพธ์อยู่ระหว่าง $MIN|0Y$ และ $MAX|0Y$ เพิ่มข้อมูลเชิงลึก $CLUES|0Y$"
- ESPIONAGE_OPERATION_ON_ROLL_FAILED_GREATER_THAN_EQ:1 "($CHANCE|%0Y$) Result is $MIN|0Y$ or greater. Finishes stage."
- ESPIONAGE_OPERATION_ON_ROLL_FAILED_LESS_THAN_EQ:1 "($CHANCE|%0Y$) Result is $MAX|0Y$ or less. Adds $CLUES|0Y$ Insights."
+ espionage_operation_roll_extended_header:0 "$espionage_operation_roll_header$\n\n§Eผลลัพธ์:§!"
+ ESPIONAGE_OPERATION_ON_ROLL_FAILED_RANGE:1 "($CHANCE|%0Y$) ผลลัพธ์อยู่ระหว่าง $MIN|0Y$ ถึง $MAX|0Y$ เพิ่มข้อมูลเชิงลึก $CLUES|0Y$"
+ ESPIONAGE_OPERATION_ON_ROLL_FAILED_GREATER_THAN_EQ:1 "($CHANCE|%0Y$) ผลลัพธ์คือ $MIN|0Y$ หรือสูงกว่านั้น จบขั้นตอน"
+ ESPIONAGE_OPERATION_ON_ROLL_FAILED_LESS_THAN_EQ:1 "($CHANCE|%0Y$) ผลลัพธ์คือ $MAX|0Y$ หรือน้อยกว่านั้น เพิ่มข้อมูลเชิงลึก $CLUES|0Y$"
  ESPIONAGE_OPERATION_SPYNETWORK_NOT_LEVEL:2 "§R- ต้องการ §Yเลเวลการแทรกซึม§! $VALUE|Y$ หรือสูงกว่า§!"
  tooltip_espionage_asset_guaranteed_resume:0 "§RExpending§! our Spy Network Asset will allow progress to resume."
  tooltip_espionage_identify_decryption_encryption:0 "They may identify us if their §Y$MOD_INTEL_DECRYPTION_ADD$§! is superior to our §Y$MOD_INTEL_ENCRYPTION_ADD$§!."
