--- a/mod/thmod/localisation/english/nemesis_intel_l_english.yml
+++ b/mod/thmod/localisation/english/nemesis_intel_l_english.yml
@@ -105,7 +105,7 @@
  INTEL_MONTHLY_DECREASE:0 "ข่าวกรองกำลังมีการเปลี่ยนแปลงในอัตรา $VALUE|R$ ต่อเดือน จนถึงขั้นต่ำที่ $TARGET|Y$"
  intel_map_mode:0 "โหมดแผนที่ข่าวกรอง"
  intel_map_mode_desc:1 "เส้นขอบของจักรวรรดิจะมีสีตามข้อมูลข่าวกรองที่มีอยู่ตามจักรวรรดิที่เราเลือก"
- INTEL_MAP_MODE_TIP:1 "Our Intel on §H$TARGET$§!: $INTEL|Y$"
+ INTEL_MAP_MODE_TIP:1 "ข้อมูลข่าวกรองของเราที่ §H$TARGET$§!: $INTEL|Y$"
  INTEL_MAP_MODE_TIP_SELF:1 "We hopefully have full Intel on ourselves."
  government_NAME:0 "รัฐบาล"
  diplomacy_NAME:0 "การทูต"
@@ -120,7 +120,7 @@
  FEDERATION_TYPE_INTEL:0 "ข่าวกรองพื้นฐานของสมาชิกสหพันธ์ถูกกำหนดขั้นต่ำที่ $INTEL|Y$ และปรับเปลี่ยนโดยการรวมอำนาจเข้าสู่ส่วนกลางของสหพันธ์"
  OPINION_BREAKDOWN_NOT_ENOUGH_INTEL:2 "Since we do not have enough Intel, we can only speculate as to their reasons."
  CANNOT_INSPECT_NO_INTEL:1 "We do not have enough Intel to know their ship design."
- INTEL_NEGATIVE:1 "Intel on $TARGET|R$ is falling"
+ INTEL_NEGATIVE:1 "ข้อมูลข่าวกรองของ $TARGET|R$ กำลังลดลง"
  ACTION_EMBASSY_OFFER_DESC:0 "§H[Actor.GetName]§! อยากให้เราจัดตั้งสถานทูตร่วมกัน"
  INTEL_HOW_TO_GAIN:1 "§E§Yข้อมูลข่าวกรอง§! เพิ่มขึ้นได้ด้วยการปรับปรุง §Yความเชื่อใจ§!, §Yการแทรกซึม§! เครือข่ายสายลับ หรือการทำ §Yสนธิสัญญาทางการทูต§! ที่ลึกขึ้นกับจักรวรรดิอื่น\n\nปฏิบัติการ §Yรวบรวมข้อมูล§! ยังสามารถทำให้ได้รับรายงานข้อมูลแบบชั่วคราวได้อีกด้วย§!"
  BASE_INTEL_LEVEL:0 "เลเวล: $LEVEL$"
