--- a/mod/thmod/localisation/english/overlord_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_l_english.yml
@@ -267,10 +267,10 @@
  resolution_defenseprivatization_corporate_warlords:0 "Corporate Peacekeeping"
  resolution_defenseprivatization_corporate_warlords_desc:0 "'$enclave.235.4.desc$'"
  resolution_defenseprivatization_repeal_1_effect_success:0 "Repeals the §Y$resolution_defenseprivatization_defense_contracts$§! resolution."
- resolution_defenseprivatization_repeal_2_effect_success:0 "Repeals the §Y$resolution_defenseprivatization_private_support_troops$§! resolution, leaving §Y$resolution_defenseprivatization_defense_contracts$§! as galactic law."
- resolution_defenseprivatization_repeal_3_effect_success:0 "Repeals the §Y$resolution_defenseprivatization_condottieri$§! resolution, leaving §Y$resolution_defenseprivatization_private_support_troops$§! as galactic law."
- resolution_defenseprivatization_repeal_4_effect_success:0 "Repeals the §Y$resolution_defenseprivatization_security_business$§! resolution, leaving §Y$resolution_defenseprivatization_condottieri$§! as galactic law."
- resolution_defenseprivatization_repeal_5_effect_success:0 "Repeals the §Y$resolution_defenseprivatization_corporate_warlords$§! resolution, leaving §Y$resolution_defenseprivatization_security_business$§! as galactic law."
+ resolution_defenseprivatization_repeal_2_effect_success:0 "ยกเลิกมติ §Y$resolution_defenseprivatization_private_support_troops$§! แล้วออก §Y$resolution_defenseprivatization_defense_contracts$§! เป็นกฎหมายกาแล็กติก"
+ resolution_defenseprivatization_repeal_3_effect_success:0 "ยกเลิกมติ §Y$resolution_defenseprivatization_condottieri$§! แล้วออก §Y$resolution_defenseprivatization_private_support_troops$§! เป็นกฎหมายกาแล็กติก"
+ resolution_defenseprivatization_repeal_4_effect_success:0 "ยกเลิกมติ §Y$resolution_defenseprivatization_security_business$§! แล้วออก §Y$resolution_defenseprivatization_condottieri$§! เป็นกฎหมายกาแล็กติก"
+ resolution_defenseprivatization_repeal_5_effect_success:0 "ยกเลิกมติ §Y$resolution_defenseprivatization_corporate_warlords$§! แล้วออก §Y$resolution_defenseprivatization_security_business$§! เป็นกฎหมายกาแล็กติก"
  resolution_defenseprivatization_defense_contracts_tooltip:1 "Every §YMercenary Enclave§! gains §G+10§! Naval Capacity.\n§YMercenary Dividends§! are more frequent.\nHired §YMercenary Fleets§! take up §G5%§! less Naval Capacity but have §R+10%§! Energy Upkeep."
  resolution_defenseprivatization_private_support_troops_tooltip:1 "Every §YMercenary Enclave§! gains §G+20§! Naval Capacity.\n§YMercenary Dividends§! are more frequent.\nHired §YMercenary Fleets§! take up §G10%§! less Naval Capacity but have §R+20%§! Energy Upkeep."
  resolution_defenseprivatization_condottieri_tooltip:1 "Every §YMercenary Enclave§! gains §G+30§! Naval Capacity.\n§YMercenary Dividends§! are more frequent.\nHired §YMercenary Fleets§! take up §G15%§! less Naval Capacity but have §R+30%§! Energy Upkeep.\n\n$resolution_defenseprivatization_breach$"
@@ -329,17 +329,17 @@
  count_available_debris_trigger:0 "Count Available Debris"
  effect_random_available_debris:0 "Random Available Debris"
  DEBRIS_OWNERSHIP_PASSED_TO:0 "Debris ownership passed to $COUNTRY|Y$"
- MOD_SHIP_FRIENDLY_TERRITORY_ARMOR_ADD:0 "$MOD_SHIP_ARMOR_ADD$ in Friendly Systems"
- MOD_SHIP_FRIENDLY_TERRITORY_ARMOR_MULT:0 "$MOD_SHIP_ARMOR_MULT$ in Friendly Systems"
- MOD_SHIP_FRIENDLY_TERRITORY_SHIELD_ADD:0 "$MOD_SHIP_SHIELD_ADD$ in Friendly Systems"
- MOD_SHIP_FRIENDLY_TERRITORY_SHIELD_MULT:0 "$MOD_SHIP_SHIELD_MULT$ in Friendly Systems"
- MOD_SHIP_FRIENDLY_TERRITORY_EVASION_ADD:0 "$MOD_SHIP_EVASION_ADD$ in Friendly Systems"
- MOD_SHIP_FRIENDLY_TERRITORY_EVASION_MULT:0 "$MOD_SHIP_EVASION_MULT$ in Friendly Systems"
- MOD_SHIP_FRIENDLY_TERRITORY_ACCURACY_ADD:0 "$MOD_SHIP_ACCURACY_ADD$ in Friendly Systems"
- MOD_SHIP_FRIENDLY_TERRITORY_ACCURACY_MULT:0 "$MOD_SHIP_ACCURACY_MULT$ in Friendly Systems"
- MOD_SHIP_FRIENDLY_TERRITORY_TRACKING_ADD:0 "$MOD_SHIP_TRACKING_ADD$ in Friendly Systems"
- MOD_SHIP_FRIENDLY_TERRITORY_TRACKING_MULT:0 "$MOD_SHIP_TRACKING_MULT$ in Friendly Systems"
- MOD_SHIP_FRIENDLY_TERRITORY_FIRE_RATE_MULT:0 "$MOD_SHIP_FIRE_RATE_MULT$ in Friendly Systems"
+ MOD_SHIP_FRIENDLY_TERRITORY_ARMOR_ADD:0 "$MOD_SHIP_ARMOR_ADD$ ในระบบดาวที่เป็นมิตร"
+ MOD_SHIP_FRIENDLY_TERRITORY_ARMOR_MULT:0 "$MOD_SHIP_ARMOR_MULT$ ในระบบดาวที่เป็นมิตร"
+ MOD_SHIP_FRIENDLY_TERRITORY_SHIELD_ADD:0 "$MOD_SHIP_SHIELD_ADD$ ในระบบดาวที่เป็นมิตร"
+ MOD_SHIP_FRIENDLY_TERRITORY_SHIELD_MULT:0 "$MOD_SHIP_SHIELD_MULT$ ในระบบดาวที่เป็นมิตร"
+ MOD_SHIP_FRIENDLY_TERRITORY_EVASION_ADD:0 "$MOD_SHIP_EVASION_ADD$ ในระบบดาวที่เป็นมิตร"
+ MOD_SHIP_FRIENDLY_TERRITORY_EVASION_MULT:0 "$MOD_SHIP_EVASION_MULT$ ในระบบดาวที่เป็นมิตร"
+ MOD_SHIP_FRIENDLY_TERRITORY_ACCURACY_ADD:0 "$MOD_SHIP_ACCURACY_ADD$ ในระบบดาวที่เป็นมิตร"
+ MOD_SHIP_FRIENDLY_TERRITORY_ACCURACY_MULT:0 "$MOD_SHIP_ACCURACY_MULT$ ในระบบดาวที่เป็นมิตร"
+ MOD_SHIP_FRIENDLY_TERRITORY_TRACKING_ADD:0 "$MOD_SHIP_TRACKING_ADD$ ในระบบดาวที่เป็นมิตร"
+ MOD_SHIP_FRIENDLY_TERRITORY_TRACKING_MULT:0 "$MOD_SHIP_TRACKING_MULT$ ในระบบดาวที่เป็นมิตร"
+ MOD_SHIP_FRIENDLY_TERRITORY_FIRE_RATE_MULT:0 "$MOD_SHIP_FIRE_RATE_MULT$ ในระบบดาวที่เป็นมิตร"
  subject_loyalty_effects:0 "บริวาร"
  naval_cap_unmodified:0 "$subject_loyalty_effects$"
  resolution_galcom_ethic_modifier:0 "$resolution_category_bureaucraticsurveillance$"
