--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -290,7 +290,7 @@
  preset_satellite:0 "ดาวบริวาร"
  preset_signatory:0 "สนธิสัญญา"
  preset_thrall:0 "ทาส"
- preset_satrapy:0 "เซแทร็ป/เจ้าประเทศราช"
+ preset_satrapy:0 "เซทระพี/เขตปกครอง"
  preset_relic_satrapy:0 "$preset_satrapy$"
  preset_vassal_nice_01:0 "$preset_vassal$"
  preset_vassal_nice_01_desc:0 "$preset_vassal_desc$"
@@ -1058,7 +1058,7 @@
  prospectorium_technology_engineering_modifier:0 "$prospectorium_technology_physics_modifier$"
  leader_trait_bulwark_watcher_tooltip:1 "$t$§L$leader_trait_bulwark_watcher$§!\n$tt$$MOD_SHIP_FRIENDLY_TERRITORY_EVASION_MULT$: §G+15%§!\n$tt$$MOD_SHIP_FRIENDLY_TERRITORY_TRACKING_MULT$: §G+15%§!"
  leader_trait_bulwark_retaliator_tooltip:0 "$t$§L$leader_trait_bulwark_retaliator$§!\n$tt$$MOD_SHIP_FRIENDLY_TERRITORY_FIRE_RATE_MULT$: §G+30%§!"
- leader_trait_bulwark_sentinel_tooltip:0 "$t$§L$leader_trait_bulwark_sentinel$§!\n$tt$Shield Hit Pts in Friendly Systems: §G+30%§!"
+ leader_trait_bulwark_sentinel_tooltip:0 "$t$§L$leader_trait_bulwark_sentinel$§!\n$tt$Shield Hit Pts ในระบบดาวที่เป็นมิตร: §G+30%§!"
  leader_trait_scholarium_investigator_tooltip:0 "$t$§L$leader_trait_scholarium_investigator$§!\n$tt$$MOD_COUNTRY_ALL_TECH_RESEARCH_SPEED$: §G+10%§!"
  leader_trait_scholarium_explorer_tooltip:0 "$t$§L$leader_trait_scholarium_explorer$§!\n$tt$$MOD_SHIP_SCIENCE_SURVEY_SPEED$: §G+20%§!"
  leader_trait_scholarium_observer_tooltip:1 "$t$§L$leader_trait_scholarium_observer$§!\n$tt$$MOD_SHIP_ANOMALY_RESEARCH_SPEED$: §G+25%§!\n$tt$$MOD_SHIP_ANOMALY_GENERATION_CHANCE$: §G+5%§!"
@@ -1163,7 +1163,7 @@
  preset_thrall_desc:0 "A Thrall is a Fallen Empire Subject type obligated to pay a monthly basic resource tax to their ancient Overlord and with no ability to expand their borders."
  preset_scion_desc:1 "A Scion is a Subject type that was guided through their development by a Fallen Empire Overlord."
  preset_satrapy_desc:0 "A Satrapy is a Khan Subject type obligated to pay their warmongering Overlord both ships and basic resources."
- preset_relic_satrapy_desc:1 "A Satrapy is a Subject type continuing the traditions of the Great Khan that is obligated to provide their Overlord with both ships and resources."
+ preset_relic_satrapy_desc:1 "เซทระพี/เขตปกครองมณฑล เป็นประเภทบริวารที่สืบสานวัฒนธรรมการปกครองเมืองขึ้นของข่านผู้ยิ่งใหญ่ ซึ่งบริวารหรือเขตปกครองมีหน้าที่จัดหายานรบและทรัพยากรให้กับเจ้าเหนือหัว"
  preset_bulwark_flavor_desc:0 "This subject specializes in military affairs. They are known for their excellence in defensive matters, providing insight and protection for their overlord. In turn, their single-minded focus makes them highly reliant on material support to keep their empire running."
  preset_scholarium_flavor_desc:0 "This subject specializes in research and science. With almost their entire budget focused on supporting their academics and researchers, they are in dire need of protection from their overlord, who receives incredible technology for their troubles."
  preset_prospectorium_flavor_desc:0 "This subject specializes in materials and manufacturing. Their keen senses allow them to dig up the most valuable minerals from regions others have already given up on, making the most out of every asteroid or moon out there."
@@ -1177,7 +1177,7 @@
  preset_thrall_flavor_desc:0 "A thrall serves as a subject to an ancient awakened empire. Subjected to a harsh rule from afar, they pay a considerable amount of wealth to their ambitious overlord, who uses their vassals' wealth to fuel their own war machines."
  preset_scion_flavor_desc:0 "A scion serves as a subject to an ancient awakened empire. Long supported by an ancient philanthropic benefactor, they are autonomous in almost all aspects of their rule. They occasionally receive gifts or aid from their liege for reasons unfathomable to the rest of the galaxy."
  preset_satrapy_flavor_desc:0 "A satrapy serves as a subject to the Great Khan. Having bent to the military might of the marauders, they have been given the right to govern their region of the galaxy in the Great Khan's name. As long as they continue to support the marauders' ongoing conquests with ships and resources, they are left to attend to their own matters."
- preset_relic_satrapy_flavor_desc:0 "A satrapy was the subject style favored by the Great Khan, now with a new leader on the throne it would be a waste to toss away such tradition. In return for supporting their Overlord's ongoing conquests with ships and resources, they are left to attend to their own matters."
+ preset_relic_satrapy_flavor_desc:0 "เซทระพี/เขตปกครองมณฑล เป็นรูปแบบการปกครองเมืองขึ้นที่ข่านผู้ยิ่งใหญ่ชื่นชอบ บัดนี้เมื่อมีผู้นำคนใหม่บนบัลลังก์แล้ว คงเป็นการสูญเปล่าหากจะละทิ้งวัฒนธรรมดังกล่าวไป โดยที่รัฐบริวารจะต้องส่งยานรบและทรัพยากรบางส่วนให้แก่เจ้าเหนือหัวเพื่อเป็นกำลังในการพิชิตและยึดครองจักรวรรดิอื่นๆต่อไป"
  is_capital:0 "$TRIGGER_FAIL$§R$requires_capital_planet_desc$§!"
  subject_is_bulwark:0 "$TRIGGER_FAIL$§RSubject must be Bulwark specialist.§!"
  subject_is_prospectorium:0 "$TRIGGER_FAIL$§RSubject must be Prospectorium specialist.§!"
