--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -14,9 +14,9 @@
  EXTERNAL_POOL_AVAILABILITY_TITLE:0 "$NAME|Y$ เป็นผู้นำจากภายนอกเนื่องจาก:"
  FROM_DEFENDING_GENERAL:0 "Defending General $NAME|H$:\n"
  FROM_ATTACKING_GENERAL:0 "Attacking General $NAME|H$:\n"
- PLANET_COMBAT_WIDTH:0 "Planet Combat Width: $VALUE|H$"
- MINIMUM_COMBAT_WIDTH:0 "Minimum Combat Width: $VALUE|H$"
- MOD_PLANET_COMBAT_WIDTH_ADD:0 "Planetary Combat Width"
+ PLANET_COMBAT_WIDTH:0 "ความกว้างแนวรบของดาวเคราะห์: $VALUE|H$"
+ MINIMUM_COMBAT_WIDTH:0 "ความกว้างแนวรบขั้นต่ำ: $VALUE|H$"
+ MOD_PLANET_COMBAT_WIDTH_ADD:0 "ความกว้างแนวรบของดาวเคราะห์"
  empire_capital_world:0 "Empire Capital"
  sector_capital_world:0 "Sector Capital"
  TOO_CLOSE_TO_ANOTHER_SECTOR_CAPITAL:0 "Sector Capitals need to be at least 5 jumps apart."
@@ -26,7 +26,7 @@
  RECRUIT_LEADER_AT_CAP_TITLE:0 "ผู้นำเต็มความจุ"
  RECRUIT_LEADER_AT_CAP_DESC:0 "การสรรหาผู้นำคนนี้จะทำให้คุณมีผู้นำมากกว่าขีดจำกัดผู้นำของคุณ ทำให้เพิ่มโทษในการบำรุงรักษาและค่าประสบการณ์ที่ผู้นำแต่ละคนจะได้รับ"
  RECRUIT_LEADER_ALREADY_OVER_CAP_TITLE:0 "จำนวนผู้นำเกินความจุ"
- RECRUIT_LEADER_ALREADY_OVER_CAP_DESC:0 "You have exceeded your Leader Cap. Recruiting this leader will further increase penalties to your leaders' upkeep and experience gain."
+ RECRUIT_LEADER_ALREADY_OVER_CAP_DESC:0 "จำนวนผู้นำของคุณเกินขีดจำกัดแล้ว การรับผู้นำคนนี้จะเพิ่มโทษค่าบำรุงรักษา(เงินเดือน)และค่าประสบการณ์ที่ได้รับของผู้นำของคุณทั้งหมด"
  RECRUIT_LEADER_TITLE:0 "แต่งตั้งผู้นำ?"
  RECRUIT_LEADER_DESC:0 "สรรหาผู้นำในจักรวรรดิของคุณ\n\nผู้นำคนนี้มีค่าใช้จ่าย $COST|Y$ และค่าตอบแทน §Y[Root.GetUpkeep]§! ต่อเดือน"
  TOTAL_LEADER_COST:0 "ทั้งหมด: $COST$"
@@ -963,7 +963,7 @@
  mod_category_psionics_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yพลังจิต§!"
  mod_category_industry_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yอุตสาหกรรม§!"
  mod_category_materials_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yวัสดุ§!"
- mod_category_propulsion_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yระบบขับเคลื่อน§!"
+ mod_category_propulsion_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yระบบขับดัน§!"
  mod_category_voidcraft_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yยานอวกาศ§!"
  mod_category_archaeostudies_draw_chance_mult:0 "โอกาสได้ตัวเลือกการวิจัย §Yการศึกษาโบราณคดี§!"
  leader_trait_narrow_minded:0 "Narrow-Minded"
@@ -996,7 +996,7 @@
  leader_trait_annihilator_desc:1 "This leader focuses on the quick destruction of planetary defenses."
  leader_trait_cautious_2:0 "$leader_trait_cautious$ II"
  leader_trait_cautious_2_desc:0 "$leader_trait_cautious_desc$"
- leader_trait_watchdog:0 "Vigilant"
+ leader_trait_watchdog:0 "ระมัดระวังตื่นตัว"
  leader_trait_watchdog_desc:1 "This leader excels at coordinating fleets in friendly territory, using local knowledge to its full advantage."
  leader_trait_unyielding_2:0 "$leader_trait_unyielding$ II"
  leader_trait_unyielding_2_desc:0 "$leader_trait_unyielding_desc$"
@@ -1070,7 +1070,7 @@
  leader_trait_archaeo_specialization_desc:1 "This leader favors ancient technology, convinced that they will bring unexpected advantages to the battlefield."
  leader_trait_artillery_specialization:0 "Artillery Focus"
  leader_trait_artillery_specialization_desc:1 "This leader favors long-range engagement with artillery playing the main role in their fleet."
- leader_trait_carrier_specialization:0 "Carrier Focus"
+ leader_trait_carrier_specialization:0 "โฟกัสยานแม่"
  leader_trait_carrier_specialization_desc:1 "This leader favors small strike crafts and screening ships to protect their valuable carriers."
  leader_trait_rocketry_specialization:0 "Guidance System Focus"
  leader_trait_rocketry_specialization_desc:1 "This leader favors missile strikes above all else, aiming at delivering a devastating blow to enemy fleets."
