--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -207,10 +207,10 @@
  IMPERIALIST_FEDERATION:0 "$military_federation$"
  IMPERIALIST_FEDERATION_NOT_MILITARIST:0 "$military_federation$"
  IMPERIALIST_FEDERATION_DESC:0 "Being a member of a $military_federation$ will please the [Root.GetName]."
- IMPERIALIST_FLEET_USAGE_HIGH:0 "ใช้ความจุกองยานสูง"
+ IMPERIALIST_FLEET_USAGE_HIGH:0 "ใช้ความจุของยานรบสูง"
  IMPERIALIST_FLEET_USAGE_NOT_HIGH:0 "$IMPERIALIST_FLEET_USAGE_HIGH$"
  IMPERIALIST_FLEET_USAGE_HIGH_DESC:0 "การสร้างกองยานให้เต็มความจุของจักรวรรดิจะทำให้ [Root.GetName] พอใจ"
- IMPERIALIST_FLEET_USAGE_LOW:0 "ใช้ยานที่ต่ำกว่าขีดความสามารถ"
+ IMPERIALIST_FLEET_USAGE_LOW:0 "ใช้ความจุของยานรบต่ำ"
  IMPERIALIST_FLEET_USAGE_NOT_LOW:0 "$IMPERIALIST_FLEET_USAGE_LOW$"
  IMPERIALIST_FLEET_USAGE_LOW_DESC:0 "การบำรุงรักษากองยานที่ต่ำกว่าขีดความสามารถของจักรวรรดิเราจะทำให้ [Root.GetName] ไม่พอใจอย่างมาก"
  ISOLATIONIST_PHILOSOPHY:0 "การป้องกันที่แข็งแกร่ง"
