--- a/mod/thmod/localisation/english/technology_l_english.yml
+++ b/mod/thmod/localisation/english/technology_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  materials:0 "วัสดุ"
  materials_desc:0 "The creation and manipulation of materials for increased utility and durability."
- propulsion:0 "ระบบขับเคลื่อน"
+ propulsion:0 "ระบบขับดัน"
  propulsion_desc:1 "The study of propulsion and trajectory."
  voidcraft:0 "ยานอวกาศ"
  voidcraft_desc:0 "Space is the final frontier. To master it is to master the future."
@@ -133,13 +133,13 @@
  tech_armor_hardeners_1_desc:0 "$ARMOR_HARDENER_1_DESC$"
  tech_armor_hardeners_2:0 "การเสริมความแข็งแกร่งแบบปรับปรุงให้เกราะ"
  tech_armor_hardeners_2_desc:0 "$ARMOR_HARDENER_2_DESC$"
- tech_thrusters_1:0 "ตัวขับดันดันเคมี"
+ tech_thrusters_1:0 "ระบบขับดันเคมี"
  tech_thrusters_1_desc:0 "Simple yet moderately effective chemical thrusters that rely on combustible propellant to function."
- tech_thrusters_2:0 "ตัวขับดันไอออน"
+ tech_thrusters_2:0 "ระบบขับดันไอออน"
  tech_thrusters_2_desc:0 "These electric thrusters use beams of ions to generate thrust without the need for propellant."
- tech_thrusters_3:0 "ตัวขับดันพลาสมา"
+ tech_thrusters_3:0 "ระบบขับดันพลาสมา"
  tech_thrusters_3_desc:0 "An advanced form of electric propulsion, plasma thrusters afford ships greater sublight speeds and maneuverability."
- tech_thrusters_4:0 "ตัวขับดันแรงดล"
+ tech_thrusters_4:0 "ระบบขับดันแรงดล"
  tech_thrusters_4_desc:0 "These highly advanced fusion-powered thrusters provide ships with unmatched maneuverability and speed under sublight conditions."
  tech_afterburners_1:0 "อาฟเตอร์เบิร์นเนอร์"
  tech_afterburners_1_desc:0 "These powerful thrusters provide additional combat speed but consume a great deal of power."
@@ -378,7 +378,7 @@
  tech_zero_point_power_desc:1 "These generators extract vacuum energy, providing an almost limitless supply of ship power. There is no more efficient way to generate energy."
  tech_dark_matter_power_core:0 "พลังงานสสารมืด"
  tech_dark_matter_power_core_desc:1 "These generators appear to somehow draw energy directly from dark matter, providing more ship power than should be possible according to the laws of physics."
- tech_dark_matter_propulsion:0 "ระบบขับเคลื่อนด้วยสสารมืด"
+ tech_dark_matter_propulsion:0 "ระบบขับดันสสารมืด"
  tech_dark_matter_propulsion_desc:0 "$SHIP_THRUSTER_5_DESC$"
  tech_reactor_boosters_1:0 "เครื่องเร่งปฏิกิริยา"
  tech_reactor_boosters_1_desc:0 "$REACTOR_BOOSTER_1_DESC$"
