--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -293,7 +293,7 @@
  HAS_NOT_RING:0 "Does NOT have a ring"
  HAS_NUM_MODIFIERS:0 "จำนวนการปรับเปลี่ยน $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_MODIFIERS:1 "Number of Modifiers is NOT $COMPARATOR$ $NUM|Y$"
- HAS_ANY_STRATEGIC_RESOURCE:0 "Has a Strategic Resource"
+ HAS_ANY_STRATEGIC_RESOURCE:0 "มีทรัพยากรเชิงยุทธศาสตร์"
  HAS_NOT_ANY_STRATEGIC_RESOURCE:0 "ไม่มีทรัพยากรเชิงยุทธศาสตร์"
  IS_FACTION:0 "เป็นกลุ่มการเมือง"
  IS_NOT_FACTION:0 "ไม่เป็นกลุ่มการเมือง"
@@ -948,13 +948,13 @@
  NUM_FREE_SPACEPORT_MODULE_SLOTS:0 "Number of free spaceport module slots is $COMPARATOR$ $NUM|Y$.\n"
  NOT_NUM_SPACEPORT_MODULES:0 "Number of spaceport modules is NOT $COMPARATOR$ $NUM|Y$.\n"
  NUM_SPACEPORT_MODULES:0 "Number of spaceport modules is $COMPARATOR$ $NUM|Y$.\n"
- MAX_NAVAL_CAPACITY_TRIGGER:0 "ความจุยานรบของกองยานรบ $COMPARATOR$ $NUM|Y$"
- MAX_NAVAL_CAPACITY_NOT_TRIGGER:0 "ความจุยานรบของกองยานรบไม่ $COMPARATOR$ $NUM|Y$"
+ MAX_NAVAL_CAPACITY_TRIGGER:0 "ความจุของยานรบ $COMPARATOR$ $NUM|Y$"
+ MAX_NAVAL_CAPACITY_NOT_TRIGGER:0 "ความจุของยานรบไม่ $COMPARATOR$ $NUM|Y$"
  ENCLAVE_CAPACITY_LEFT_TRIGGER:0 "Mercenary Enclave Capacity is $COMPARATOR$ $NUM|Y$."
  COMMAND_LIMIT_TRIGGER:0 "Command Limit is $COMPARATOR$ $NUM|Y$."
  COMMAND_LIMIT_NOT_TRIGGER:0 "Command Limit is NOT $COMPARATOR$ $NUM|Y$."
- USED_NAVAL_CAPACITY_PERCENT_TRIGGER:0 "ขนาดกองยานทั้งหมด $COMPARATOR$ $NUM|Y%0$ ของความจุยานรบของกองยานรบ"
- USED_NAVAL_CAPACITY_PERCENT_NOT_TRIGGER:0 "ขนาดกองยานทั้งหมดไม่ $COMPARATOR$ $NUM|Y%0$ ของความจุยานรบของกองยานรบ"
+ USED_NAVAL_CAPACITY_PERCENT_TRIGGER:0 "ขนาดกองยานทั้งหมด $COMPARATOR$ $NUM|Y%0$ ของความจุยานรบ"
+ USED_NAVAL_CAPACITY_PERCENT_NOT_TRIGGER:0 "ขนาดกองยานทั้งหมดไม่ $COMPARATOR$ $NUM|Y%0$ ของความจุยานรบ"
  USED_NAVAL_CAPACITY_INTEGER_TRIGGER:0 "ขนาดกองยานทั้งหมด $COMPARATOR$ $NUM|Y$"
  USED_NAVAL_CAPACITY_INTEGER_NOT_TRIGGER:0 "ขนาดกองยานทั้งหมดไม่ $COMPARATOR$ $NUM|Y$"
  STARBASE_CAPACITY_TRIGGER:0 "Starbase Capacity is $COMPARATOR$ $NUM|Y$."
@@ -1198,7 +1198,7 @@
  A_DEFENDER:0 "a defender"
  JOIN_WAR_ON_SIDE_EFFECT:1 "$FIRST|Y$ joins as $SIDE$ in the war against $ENEMY|Y$."
  JOIN_WAR_ON_SIDE_COUNTRY_EFFECT:0 "$FIRST|Y$ joins $SECOND|Y$ as an ally in their war against $ENEMY|Y$."
- JOIN_ALLIANCE_EFFECT:0 "$SECOND|Y$ joins the $ALLIANCE|Y$."
+ JOIN_ALLIANCE_EFFECT:0 "$SECOND|Y$ เข้าร่วม $ALLIANCE|Y$"
  JOIN_ALLIANCE_EFFECT_2:0 "$SECOND|Y$ joins in a Federation together with $FIRST|Y$."
  LEAVE_ALLIANCE:0 "Leave alliance"
  NOT_LEAVE_ALLIANCE:0 "Don't leave alliance"
@@ -1288,7 +1288,7 @@
  SET_PLANET_MAX_HEALTH_EFFECT:0 "ตั้งพลังชีวิตสูงสุดเป็น $VALUE|Y$"
  SET_PLANET_HEALTH_EFFECT:0 "ตั้งพลังชีวิตเป็น $VALUE|Y$"
  ADD_TRAIT:1 "§H$LEADER$§! ได้รับคุณลักษณะ §H$TRAIT$§! โดยให้ผลดังต่อไปนี้:\n$EFFECTS$\n"
- REMOVE_TRAIT:1 "Removes $TRAIT$ trait from $LEADER|Y$\n"
+ REMOVE_TRAIT:1 "ลบคุณลักษณะ $TRAIT$ ของ $LEADER|Y$\n"
  REMOVE_ALL_NEGATIVE_TRAITS:1 "ลบคุณลักษณะเชิงลบทั้งหมดของ $LEADER|Y$\n"
  REMOVE_ALL_POSITIVE_TRAITS:0 "Removes all positive traits from $LEADER|Y$\n"
  REMOVE_ALL_TRAITS:0 "Removes all traits from $LEADER|Y$\n"
@@ -1493,14 +1493,14 @@
  HAS_SEEN_ANY_BYPASS:0 "$COUNTRY|Y$ has NOT encountered a $BYPASS_TYPE|Y$."
  ADD_SEEN_BYPASS_INSTANCE:0 "$COUNTRY|Y$ records $BYPASS|Y$ location."
  ADD_RESOURCE:1 "$RESOURCES|Y$"
- STARBASE_TRIGGER_SIZE_EQ:0 "Starbase Level is $SIZE|Y$"
- STARBASE_TRIGGER_SIZE_GT:0 "Starbase Level is greater than $SIZE|Y$"
- STARBASE_TRIGGER_SIZE_LT:0 "Starbase Level is less than $SIZE|Y$"
- STARBASE_TRIGGER_SIZE_GT_EQ:0 "Starbase Level is at least $SIZE|Y$"
- STARBASE_TRIGGER_SIZE_LT_EQ:0 "Starbase Level is at most $SIZE|Y$"
- STARBASE_TRIGGER_SIZE_NOT_EQ:0 "Starbase Level is NOT $SIZE|Y$"
- STARBASE_TRIGGER_SIZE_NOT_GT:0 "Starbase Level is NOT greater than $SIZE|Y$"
- STARBASE_TRIGGER_SIZE_NOT_LT:0 "Starbase Level is NOT less than $SIZE|Y$"
+ STARBASE_TRIGGER_SIZE_EQ:0 "เลเวลฐานอวกาศเท่ากับ $SIZE|Y$"
+ STARBASE_TRIGGER_SIZE_GT:0 "เลเวลฐานอวกาศมากกว่า $SIZE|Y$"
+ STARBASE_TRIGGER_SIZE_LT:0 "เลเวลฐานอวกาศน้อยกว่า $SIZE|Y$"
+ STARBASE_TRIGGER_SIZE_GT_EQ:0 "เลเวลฐานอวกาศอย่างน้อย $SIZE|Y$"
+ STARBASE_TRIGGER_SIZE_LT_EQ:0 "เลเวลฐานอวกาศสูงสุดอยู่ที่ $SIZE|Y$"
+ STARBASE_TRIGGER_SIZE_NOT_EQ:0 "เลเวลฐานอวกาศไม่เท่ากับ $SIZE|Y$"
+ STARBASE_TRIGGER_SIZE_NOT_GT:0 "เลเวลฐานอวกาศไม่มากกว่า $SIZE|Y$"
+ STARBASE_TRIGGER_SIZE_NOT_LT:0 "เลเวลฐานอวกาศไม่น้อยกว่า $SIZE|Y$"
  STARBASE_TRIGGER_SIZE_NOT_GT_EQ:0 "ระดับเลเวลของฐานอวกาศไม่ต่ำกว่า $SIZE|Y$"
  STARBASE_TRIGGER_SIZE_NOT_LT_EQ:0 "ระดับเลเวลของฐานอวกาศสูงสุดไม่เกิน $SIZE|Y$"
  any_owned_starbase_trigger:0 "Any owned Starbase"
@@ -1592,7 +1592,7 @@
  FEDERATION_COHESION_AT_LEAST:1 "$FEDERATION|H$ has $COMPARE$ $VAL1|2Y$ cohesion"
  START_SITUATION_EFFECT:0 "Starts Situation $SITUATION|Y$"
  DESTROY_SITUATION_EFFECT:0 "บทสรุปสถานการณ์ $NAME|Y$"
- ADD_SITUATION_PROGRESS:0 "The $SITUATION|Y$ Situation advances by $AMOUNT|Y$"
+ ADD_SITUATION_PROGRESS:0 "สถานการณ์ $SITUATION|Y$ ก้าวหน้าไป $AMOUNT|Y$"
  ADD_SITUATION_PROGRESS_NEGATIVE:0 "The $SITUATION|Y$ Situation recedes by $AMOUNT|Y$"
  SET_SITUATION_APPROACH_EFFECT:1 "Situation Approach is set to '$APPROACH|Y$'. This will have the following effects:\n$EFFECTS$"
  TRIGGER_SITUATION_PROGRESS:0 "Total progress ($CURRENT$) is $COMPARE$ $PROGRESS|Y$"
@@ -1892,7 +1892,7 @@
  STARBASE_IS_NOT_BUILDING:0 "Starbase is NOT building $COMP|Y$"
  STARBASE_IS_BUILDING:0 "Starbase is building $COMP|Y$"
  STARBASE_IS_NOT_FIRST_IN_QUEUE:0 "$FIRST|Y$ is NOT in the building queue before $SECOND|Y$"
- STARBASE_IS_FIRST_IN_QUEUE:0 "$FIRST|Y$ is in the building queue before $SECOND|Y$"
+ STARBASE_IS_FIRST_IN_QUEUE:0 "$FIRST|Y$ อยู่ในคิวการสร้างก่อน $SECOND|Y$"
  HAS_AGREEMENT_BETWEEN_TRIGGER:0 "Agreement between $COUNTRY|Y$ and $TARGET|Y$ exists"
  HAS_AGREEMENT_BETWEEN_NOT_TRIGGER:0 "Agreement between $COUNTRY|Y$ and $TARGET|Y$ does NOT exist"
  HAS_TERM_VALUE_TRIGGER:0 "The agreement has a $TERM|Y$ equal to $VALUE|Y$"
