--- a/mod/thmod/localisation/english/utopia_ascension_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_ascension_l_english.yml
@@ -134,7 +134,7 @@
  shroud_cooldown_desc:0 "The Conclave of Telepaths is still in the process of recovering from their last expedition into the Shroud. As yet, they lack the psionic strength to mount another."
  shroud_precog_cooldown:0 "$shroud_cooldown$"
  shroud_precog_cooldown_desc:0 "The Conclave of Telepaths lost many of their most powerful members to madness during their last sojourn into the Shroud. They have yet to fully replenish their numbers."
- shroud_happiness:0 "Boon of the Shroud"
+ shroud_happiness:0 "ผลบุญจากดินแดนพลังจิตบริสุทธิ์"
  shroud_happiness_desc:0 "The enigmatic Shroud has granted us a temporary boon."
  shroud_ship_upkeep:0 "$shroud_happiness$"
  shroud_ship_upkeep_desc:0 "$shroud_happiness_desc$"
@@ -549,13 +549,13 @@
  utopia.2671.name:0 "Our Bond Grows Deeper"
  utopia.2671.desc:0 "Our understanding of our patron grows. We are no more than an afterthought to it. Insects in its home. Yet, it has taken a liking to us and on this occasion, it has bestowed another drop of power upon us.\n\nOur telepaths are now more closely attuned to our patron, and we have been inspired to create a monument to celebrate our covenant, a place where our best telepaths can try to commune with the §Y[GetShroudPatron]§!."
  utopia.2671.a:0 "We feel safer in the Composer's embrace."
- utopia.2671.a.tt:0 "Our telepaths now produce additional £pops£ Pop Growth.\n\nWe can now build a £building£ §YSanctum of the Composer§! on one of our planets."
+ utopia.2671.a.tt:0 "นักโทรจิตของเราสามารถเพิ่ม £pops£ ประชากรได้\n\nเราสามารถสร้าง £building£ §Yสถานที่ศักดิ์สิทธิ์ของผู้สร้าง§! บนดาวเคราะห์ดวงใดดวงหนึ่งของเรา"
  utopia.2671.b:0 "We hunger too. War can sate us."
- utopia.2671.b.tt:0 "Our telepaths now produce additional £mod_country_naval_cap_add£ Naval Capacity.\n\nWe can now build a £building£ §YSanctum of the Eater§! on one of our planets."
+ utopia.2671.b.tt:0 "นักโทรจิตของเราสามารถเพิ่ม £mod_country_naval_cap_add£ ความจุของยานรบ\n\nเราสามารถสร้าง £building£ §Yสถานที่ศักดิ์สิทธิ์ของผู้ทำลาย§! บนดาวเคราะห์ดวงใดดวงหนึ่งของเรา"
  utopia.2671.c:0 "There is nothing more beautiful than desire."
- utopia.2671.c.tt:0 "Our telepaths now produce additional £amenities£ Amenities.\n\nWe can now build a £building£ §YSanctum of the Instrument§! on one of our planets."
+ utopia.2671.c.tt:0 "นักโทรจิตของเราสามารถเพิ่ม £amenities£ ความอยู่ดีกินดี\n\nเราสามารถสร้าง £building£ §Yสถานที่ศักดิ์สิทธิ์ของผู้เล่นดนตรี§! บนดาวเคราะห์ดวงใดดวงหนึ่งของเรา"
  utopia.2671.d:0 "A filled mind has no room for doubt."
- utopia.2671.d.tt:0 "Our telepaths now produce additional $r_research$.\n\nWe can now build a £building£ §YSanctum of the Whisperers§! on one of our planets."
+ utopia.2671.d.tt:0 "นักโทรจิตของเราสามารถเพิ่ม $r_research$\n\nเราสามารถสร้าง £building£ §Yสถานที่ศักดิ์สิทธิ์ของผู้กระซิบ§! บนดาวเคราะห์ดวงใดดวงหนึ่งของเรา"
  utopia.2676.name:0 "Potential Achieved"
  utopia.2676.desc:0 "The mysteries of the Shroud are too alien for us to dispel, but we have become more attuned to the §Y[GetShroudPatron]§!. Everywhere we go, we can sense it at the back of our minds, and its power seeps into our reality from the cracks of our psyche."
  utopia.2676.a:0 "The will of the Flesh is sacred."
@@ -577,13 +577,13 @@
  utopia.2686.b:0 "Our ships are ravenous too."
  utopia.2686.c:0 "These vessels crave purpose."
  utopia.2686.d:0 "Secrets are weapons without compare."
- building_composer_sanctum:0 "Sanctum of the Composer"
+ building_composer_sanctum:0 "สถานที่ศักดิ์สิทธิ์ของผู้สร้าง"
  building_composer_sanctum_desc:0 "The Sanctum is a place dedicated to communion with the Composer. Here, flesh roams as freely as thought. Who knows what changes the Shroud might impart upon your mortal form?"
- building_eater_sanctum:0 "Sanctum of the Eater"
+ building_eater_sanctum:0 "สถานที่ศักดิ์สิทธิ์ของผู้ทำลาย"
  building_eater_sanctum_desc:0 "The Sanctum is a place dedicated to communion with the Eater. Here, war is prepared as we plan for the next feast."
- building_instrument_sanctum:0 "Sanctum of the Instrument"
+ building_instrument_sanctum:0 "สถานที่ศักดิ์สิทธิ์ของผู้เล่นดนตรี"
  building_instrument_sanctum_desc:0 "The Sanctum is a place dedicated to communion with the Instrument. Here, riches are hoarded then traded away in a consumptive frenzy that brings us no closer to fulfillment."
- building_whisperers_sanctum:0 "Sanctum of the Whisperers"
+ building_whisperers_sanctum:0 "สถานที่ศักดิ์สิทธิ์ของผู้กระซิบ"
  building_whisperers_sanctum_desc:0 "The Sanctum is a place dedicated to communion with the Whisperers. Here, secrets are traded in hushed tones, new knowledge is brought to be sealed away, and our murmurs join the chorus."
  covenant_detection_first_contact:0 "$building_whisperers_sanctum$"
  covenant_detection_first_contact_effect:0 "Our §YStarbase§! in this system gains: §YDetection Strength§! §G+5§!\n\n"
