--- a/mod/thmod/localisation/english/utopia_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_l_english.yml
@@ -49,7 +49,7 @@
  describe_hive_worlds:1 "- §Yดาวที่เป็นรัง§! เป็นดาวเคราะห์ชนิดพิเศษที่ไม่เอื้ออำนวยต่อประชากรที่ไม่ใช่สิ่งมีชีวิตจิตสำนึกร่วม แต่ไม่ถูกจำกัดจำนวนของเขตต่างๆที่รองรับ: £district£ §Yเขตกำเนิดไฟฟ้า§!, §Yเขตเหมืองแร่§! และ §Yเขตเกษตรกรรม§! และ §Yเขตรัง§! มีประสิทธิภาพมากขึ้น\n\n- £pop£ §Yประชากร§! ที่อาศัยบน §Yดาวที่เป็นรัง§! จะมี §Yผลผลิตของทรัพยากร§! เพิ่มขึ้น §G+10%§!"
  ALLOW_PSI_CORPS:1 "ปลดล็อกสิ่งปลูกสร้าง: §Y$building_psi_corps$§!"
  ALLOW_PSI_ARMIES:0 "§H$psionic_army_plural$§! can now be recruited."
- dyson_sphere_0_MEGASTRUCTURE_DETAILS:1 "A §Y$dyson_sphere_5$§! fully envelops a given star, converting all solar output directly to £energy£ Energy Credits."
+ dyson_sphere_0_MEGASTRUCTURE_DETAILS:1 "§Y$dyson_sphere_5$§! ห่อหุ้มดาวฤกษ์จนเต็มดวง โดยแปลงพลังงานแสงจากดาวฤกษ์ทั้งหมดเป็น £energy£ เครดิตพลังงานโดยตรง"
  dyson_sphere_0_CONSTRUCTION_INFO_DELAYED:4 "A $dyson_sphere_5$ will blot out the sun, turning all planets in the system into Barren or Frozen Worlds.\n\nAny Terraforming Candidates in the system will be ruined."
  dyson_sphere_0:0 "ทรงกลมไดสัน (ขั้นที่0:ที่ตั้ง)"
  dyson_sphere_0_DESC:0 "The construction site station serves as the base for the future construction of a Dyson Sphere."
@@ -243,7 +243,7 @@
  utopia.2016.name:0 "Ruined Ring World"
  utopia.2016.desc:0 "The shattered remnants of an ancient Ring World encircle the star of the [ring_system.GetName] system. Any planetary bodies that may once have existed here must have been used as building material during this megastructure's construction.\n\nNo evidence hinting towards who originally built this marvel of engineering has been found, but it must have been the product of a very advanced culture."
  utopia.2016.a:0 "As advanced as we are, at any rate."
- utopia.2017.name:0 "Ring World Section Restored"
+ utopia.2017.name:0 "เซ็กชันโลกวงแหวนได้รับการบูรณะซ่อมแซม"
  utopia.2017.desc:0 "Building on what remains of the ruined Ring World in the [From.GetName] system, our engineers have managed to fully restore one of its sections. The new biosphere had to be created more or less from scratch by our leading planetologists, but it is now considered stable and ready for habitation."
  anomaly.2576.name:0 "A New Metal"
  anomaly.2576.desc:0 "Detailed surface scans of [From.GetName] have identified a large impact crater containing the wreckage of several ancient starships of unknown design. The ships appear to be completely devoid of life support systems, leading us to suspect that they were either unusually large drones or controlled by some form of artificial intelligence.\n\nInterestingly, the hull of the ships was constructed out of §HLiving Metal§!, an exceedingly rare and inorganic material with many unique properties. This metal can be "programmed" to assume a certain shape or form, and it will slowly regrow itself if damaged. Over a period of several millennia, the surviving metal from the wrecked ships was fused into a large and extremely dense deposit that could potentially be mined for centuries to come."
