--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -23,7 +23,7 @@
  requires_no_existing_quantum_catapul_two:0 "$TRIGGER_FAIL$ไม่สามารถสร้างเครื่องเหวี่ยงกองยานควอนตัมได้มากกว่าสองเครื่อง"
  quantum_catapult_0_MEGASTRUCTURE_DETAILS:1 "A device that focuses the forces of a Neutron Star or Pulsar in order to twist space and skip a fleet across great distances."
  quantum_catapult_0_CONSTRUCTION_INFO_DELAYED:1 "Early iterations of the Quantum Catapult may cause fleets to arrive in systems §Houtside§! their intended destination. This '§Yscatter radius§!' can be reduced with subsequent upgrades."
- quantum_catapult_0:0 "$quantum_catapult_1$ Site"
+ quantum_catapult_0:0 "$quantum_catapult_1$ ที่ตั้ง"
  quantum_catapult_0_DESC:1 "This compact supply depot gathers all the materials and personnel necessary to construct the first batch of vast focusing lenses for the Quantum Catapult."
  quantum_catapult_1:0 "เครื่องเหวี่ยงกองยานควอนตัม"
  quantum_catapult_1_DESC:1 "Calculations have shown that even a scant few torsion lenses, installed at precise locations around their star, can channel enough energy to enable semi-volatile trajectories across interstellar space."
